@@ -7,16 +7,15 @@
 package jp.co.future.uroborosql;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 
 import jp.co.future.uroborosql.context.ExecutionContext;
 import jp.co.future.uroborosql.fluent.ExtractionCondition;
-import jp.co.future.uroborosql.fluent.SqlFluent;
 import jp.co.future.uroborosql.mapping.TableMetadata;
 import jp.co.future.uroborosql.utils.CaseFormat;
+import jp.co.future.uroborosql.utils.ObjectUtils;
 
 /**
  * 抽出条件の生成を担当するクラス
@@ -24,20 +23,24 @@ import jp.co.future.uroborosql.utils.CaseFormat;
  * @param <T> SqlFluent型を継承するSqlEntity実装型
  * @author H.Sugimoto
  */
-abstract class AbstractExtractionCondition<T extends SqlFluent<T>> extends AbstractSqlFluent<T>
-		implements ExtractionCondition<T> {
-
+abstract class AbstractExtractionCondition<T extends ExtractionCondition<T>> implements ExtractionCondition<T> {
 	/** 抽出条件のパラメータ名に付与するプレフィックス */
 	protected static final String PREFIX = "_";
 
+	/** SqlAgent. */
+	private final SqlAgent agent;
+
+	/** ExecutionContext. */
+	private final ExecutionContext context;
+
 	/** テーブルメタデータ */
-	protected final TableMetadata tableMetadata;
+	private final TableMetadata tableMetadata;
 
 	/** where句文字列 */
-	protected final List<CharSequence> rawStrings;
+	private final List<CharSequence> rawStrings;
 
 	/** オペレータを使用したかどうか */
-	protected boolean useOperator = false;
+	private boolean useOperator = false;
 
 	/**
 	 * Constructor
@@ -48,11 +51,37 @@ abstract class AbstractExtractionCondition<T extends SqlFluent<T>> extends Abstr
 	 */
 	AbstractExtractionCondition(final SqlAgent agent, final TableMetadata tableMetadata,
 			final ExecutionContext context) {
-		super(agent, context);
+		this.agent = agent;
+		this.context = context;
 		this.tableMetadata = tableMetadata;
 		context.setSchema(tableMetadata.getSchema());
 		this.rawStrings = new ArrayList<>();
 		this.useOperator = false;
+	}
+
+	/**
+	 * SqlAgentの取得.
+	 *
+	 * @return SqlAgent
+	 */
+	protected SqlAgent agent() {
+		return agent;
+	}
+
+	/**
+	 * ExecutionContextの取得.
+	 * @return ExecutionContext
+	 */
+	protected ExecutionContext context() {
+		return context;
+	}
+
+	/**
+	 * TableMetadataの取得.
+	 * @return TableMetadata
+	 */
+	protected TableMetadata tableMetadata() {
+		return tableMetadata;
 	}
 
 	/**
@@ -118,6 +147,20 @@ abstract class AbstractExtractionCondition<T extends SqlFluent<T>> extends Abstr
 	/**
 	 * {@inheritDoc}
 	 *
+	 * @see jp.co.future.uroborosql.fluent.ExtractionCondition#equalIfNotEmpty(java.lang.String, java.lang.Object)
+	 */
+	@SuppressWarnings("unchecked")
+	@Override
+	public <V> T equalIfNotEmpty(final String col, final V value) {
+		if (ObjectUtils.isNotEmpty(value)) {
+			this.equal(col, value);
+		}
+		return (T) this;
+	}
+
+	/**
+	 * {@inheritDoc}
+	 *
 	 * @see jp.co.future.uroborosql.fluent.ExtractionCondition#notEqual(java.lang.String, java.lang.Object)
 	 */
 	@SuppressWarnings("unchecked")
@@ -125,6 +168,20 @@ abstract class AbstractExtractionCondition<T extends SqlFluent<T>> extends Abstr
 	public <V> T notEqual(final String col, final V value) {
 		context().param(PREFIX + CaseFormat.CAMEL_CASE.convert(col), new NotEqual<>(col, value));
 		this.useOperator = true;
+		return (T) this;
+	}
+
+	/**
+	 * {@inheritDoc}
+	 *
+	 * @see jp.co.future.uroborosql.fluent.ExtractionCondition#notEqualIfNotEmpty(java.lang.String, java.lang.Object)
+	 */
+	@SuppressWarnings("unchecked")
+	@Override
+	public <V> T notEqualIfNotEmpty(final String col, final V value) {
+		if (ObjectUtils.isNotEmpty(value)) {
+			this.notEqual(col, value);
+		}
 		return (T) this;
 	}
 
@@ -449,8 +506,10 @@ abstract class AbstractExtractionCondition<T extends SqlFluent<T>> extends Abstr
 	@SuppressWarnings("unchecked")
 	@Override
 	public T where(final CharSequence rawString) {
-		this.rawStrings.add(rawString);
-		this.useOperator = true;
+		if (ObjectUtils.isNotEmpty(rawString)) {
+			this.rawStrings.add(rawString);
+			this.useOperator = true;
+		}
 		return (T) this;
 	}
 
@@ -459,10 +518,28 @@ abstract class AbstractExtractionCondition<T extends SqlFluent<T>> extends Abstr
 	 *
 	 * @see jp.co.future.uroborosql.fluent.ExtractionCondition#where(java.lang.CharSequence, java.lang.String, java.lang.Object)
 	 */
+	@SuppressWarnings("unchecked")
 	@Override
 	public <V> T where(final CharSequence rawString, final String paramName, final V value) {
-		this.param(paramName, value);
-		return this.where(rawString);
+		if (ObjectUtils.isNotEmpty(rawString)) {
+			context().param(paramName, value);
+			this.where(rawString);
+		}
+		return (T) this;
+	}
+
+	/**
+	 * {@inheritDoc}
+	 *
+	 * @see jp.co.future.uroborosql.fluent.ExtractionCondition#whereIfNotEmpty(java.lang.CharSequence, java.lang.String, java.lang.Object)
+	 */
+	@SuppressWarnings("unchecked")
+	@Override
+	public <V> T whereIfNotEmpty(final CharSequence rawString, final String paramName, final V value) {
+		if (ObjectUtils.isNotEmpty(rawString) && ObjectUtils.isNotEmpty(value)) {
+			this.where(rawString, paramName, value);
+		}
+		return (T) this;
 	}
 
 	/**
@@ -470,10 +547,12 @@ abstract class AbstractExtractionCondition<T extends SqlFluent<T>> extends Abstr
 	 *
 	 * @see jp.co.future.uroborosql.fluent.ExtractionCondition#where(java.lang.CharSequence, java.util.Map)
 	 */
+	@SuppressWarnings("unchecked")
 	@Override
 	public T where(final CharSequence rawString, final Map<String, Object> paramMap) {
-		this.paramMap(paramMap);
-		return this.where(rawString);
+		context().paramMap(paramMap);
+		this.where(rawString);
+		return (T) this;
 	}
 
 	/**
@@ -597,7 +676,7 @@ abstract class AbstractExtractionCondition<T extends SqlFluent<T>> extends Abstr
 		@SafeVarargs
 		public ListOperator(final String col, final V... values) {
 			super(col);
-			valueList = Arrays.asList(values);
+			valueList = List.of(values);
 		}
 
 		/**
