@@ -8,6 +8,7 @@ package jp.co.future.uroborosql.client.command;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Properties;
 
 import org.jline.reader.LineReader;
@@ -44,7 +45,7 @@ public class HistoryCommand extends ReplCommand {
 
 		var keywords = new ArrayList<String>();
 		if (parts.length > 1) {
-			keywords.addAll(Arrays.asList(Arrays.copyOfRange(parts, 1, parts.length)));
+			keywords.addAll(List.of(Arrays.copyOfRange(parts, 1, parts.length)));
 		}
 
 		var sizeLen = String.valueOf(reader.getHistory().size()).length();
@@ -54,7 +55,7 @@ public class HistoryCommand extends ReplCommand {
 				if (keywords.isEmpty() || keywords.stream().anyMatch(s -> value.contains(s))) {
 					writer.println(String.format("%" + sizeLen + "d : %s", entry.index() + 1, value));
 				}
-			} catch (Exception e) {
+			} catch (Exception ex) {
 				// do nothing
 			}
 		});
