@@ -7,14 +7,10 @@ import static org.junit.jupiter.api.Assertions.fail;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.sql.CallableStatement;
 import java.sql.DriverManager;
-import java.sql.PreparedStatement;
-import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -24,14 +20,13 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import jp.co.future.uroborosql.config.SqlConfig;
-import jp.co.future.uroborosql.context.ExecutionContext;
+import jp.co.future.uroborosql.event.subscriber.EventSubscriber;
 import jp.co.future.uroborosql.exception.PessimisticLockException;
 import jp.co.future.uroborosql.exception.UroborosqlSQLException;
-import jp.co.future.uroborosql.filter.AbstractSqlFilter;
 import jp.co.future.uroborosql.fluent.Procedure;
 import jp.co.future.uroborosql.fluent.SqlQuery;
 import jp.co.future.uroborosql.fluent.SqlUpdate;
-import jp.co.future.uroborosql.utils.StringUtils;
+import jp.co.future.uroborosql.utils.ObjectUtils;
 
 /**
  * エラーハンドリングのテスト
@@ -45,15 +40,21 @@ public class SqlAgentRetryTest {
 
 	@BeforeEach
 	public void setUp() throws Exception {
-		config = UroboroSQL.builder(DriverManager.getConnection("jdbc:h2:mem:SqlAgentRetryTest")).build();
-		config.getSqlAgentProvider().setSqlRetryCodeList(Arrays.asList("54", "60", "30006"));
+		config = UroboroSQL
+				.builder(DriverManager
+						.getConnection("jdbc:h2:mem:" + this.getClass().getSimpleName() + ";DB_CLOSE_DELAY=-1"))
+				.build();
+		config.getSqlAgentProvider()
+				.setSqlRetryCodeList(List.of("54", "60", "30006"))
+				.setDefaultMaxRetryCount(2)
+				.setDefaultSqlRetryWaitTime(10);
 
 		agent = config.agent();
 
 		var sqls = new String(Files.readAllBytes(Paths.get("src/test/resources/sql/ddl/create_tables.sql")),
 				StandardCharsets.UTF_8).split(";");
 		for (var sql : sqls) {
-			if (StringUtils.isNotBlank(sql)) {
+			if (ObjectUtils.isNotBlank(sql)) {
 				agent.updateWith(sql.trim()).count();
 			}
 		}
@@ -71,9 +72,10 @@ public class SqlAgentRetryTest {
 	@Test
 	void testQueryRetryNoWait() throws Exception {
 		var retryCount = 3;
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 60));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, 60));
 
-		var query = agent.query("example/select_product").param("product_id", 0, 1).retry(retryCount + 1);
+		var query = agent.query("example/select_product")
+				.param("product_id", List.of(0, 1)).retry(retryCount + 1);
 		query.collect();
 		assertThat(query.context().contextAttrs().get("__retryCount"), is(retryCount));
 	}
@@ -84,9 +86,10 @@ public class SqlAgentRetryTest {
 	@Test
 	void testQueryRetryNoWaitSqlState() throws Exception {
 		var retryCount = 3;
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 0, "60"));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, 0, "60"));
 
-		var query = agent.query("example/select_product").param("product_id", 0, 1).retry(retryCount + 1);
+		var query = agent.query("example/select_product")
+				.param("product_id", List.of(0, 1)).retry(retryCount + 1);
 		query.collect();
 		assertThat(query.context().contextAttrs().get("__retryCount"), is(retryCount));
 	}
@@ -97,9 +100,10 @@ public class SqlAgentRetryTest {
 	@Test
 	void testQueryRetryWait() throws Exception {
 		var retryCount = 3;
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 60));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, 60));
 
-		var query = agent.query("example/select_product").param("product_id", 0, 1)
+		var query = agent.query("example/select_product")
+				.param("product_id", List.of(0, 1))
 				.retry(retryCount + 1, 10);
 		query.collect();
 		assertThat(query.context().contextAttrs().get("__retryCount"), is(retryCount));
@@ -111,9 +115,10 @@ public class SqlAgentRetryTest {
 	@Test
 	void testQueryRetryWaitSqlState() throws Exception {
 		var retryCount = 3;
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 0, "60"));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, 0, "60"));
 
-		var query = agent.query("example/select_product").param("product_id", 0, 1)
+		var query = agent.query("example/select_product")
+				.param("product_id", List.of(0, 1))
 				.retry(retryCount + 1, 10);
 		query.collect();
 		assertThat(query.context().contextAttrs().get("__retryCount"), is(retryCount));
@@ -126,11 +131,12 @@ public class SqlAgentRetryTest {
 	void testQueryRetryOver() throws Exception {
 		var retryCount = 3;
 		var errorCode = 60;
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, errorCode));
 
 		SqlQuery query = null;
 		try {
-			query = agent.query("example/select_product").param("product_id", 0, 1).retry(retryCount - 1);
+			query = agent.query("example/select_product")
+					.param("product_id", List.of(0, 1)).retry(retryCount - 1);
 			query.collect();
 			fail();
 		} catch (UroborosqlSQLException ex) {
@@ -147,11 +153,12 @@ public class SqlAgentRetryTest {
 		var retryCount = 3;
 		var errorCode = 0;
 		var sqlState = "60";
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode, sqlState));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, errorCode, sqlState));
 
 		SqlQuery query = null;
 		try {
-			query = agent.query("example/select_product").param("product_id", 0, 1).retry(retryCount - 1);
+			query = agent.query("example/select_product")
+					.param("product_id", List.of(0, 1)).retry(retryCount - 1);
 			query.collect();
 			fail();
 		} catch (UroborosqlSQLException ex) {
@@ -162,17 +169,40 @@ public class SqlAgentRetryTest {
 	}
 
 	/**
+	 * クエリ実行のリトライ（デフォルトリトライ回数指定時の個別リトライのOFF）
+	 */
+	@Test
+	void testQueryRetryOff() throws Exception {
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(3, 60));
+		config.getSqlAgentProvider().setDefaultMaxRetryCount(3);
+
+		SqlQuery query = null;
+		try {
+			query = agent.query("example/select_product")
+					.param("product_id", List.of(0, 1))
+					.retry(0);
+			query.collect();
+			fail();
+		} catch (UroborosqlSQLException ex) {
+			assertThat(query.context().contextAttrs().get("__retryCount"), is(0));
+		} finally {
+			config.getSqlAgentProvider().setDefaultMaxRetryCount(0);
+		}
+	}
+
+	/**
 	 * クエリ実行のリトライ（リトライ対象外のエラー発生）
 	 */
 	@Test
 	void testQueryNoRetry() throws Exception {
 		var retryCount = 3;
 		var errorCode = 1;
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, errorCode));
 
 		SqlQuery query = null;
 		try {
-			query = agent.query("example/select_product").param("product_id", 0, 1).retry(retryCount - 1);
+			query = agent.query("example/select_product")
+					.param("product_id", List.of(0, 1)).retry(retryCount - 1);
 			query.collect();
 			fail();
 		} catch (UroborosqlSQLException ex) {
@@ -189,11 +219,12 @@ public class SqlAgentRetryTest {
 		var retryCount = 3;
 		var errorCode = 0;
 		var sqlState = "1";
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode, sqlState));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, errorCode, sqlState));
 
 		SqlQuery query = null;
 		try {
-			query = agent.query("example/select_product").param("product_id", 0, 1).retry(retryCount - 1);
+			query = agent.query("example/select_product")
+					.param("product_id", List.of(0, 1)).retry(retryCount - 1);
 			query.collect();
 			fail();
 		} catch (UroborosqlSQLException ex) {
@@ -212,11 +243,12 @@ public class SqlAgentRetryTest {
 		var errorCode = 50200;
 		// SqlRetryCodeListを空にして、悲観ロック対象エラーコードで判定する
 		config.getSqlAgentProvider().setSqlRetryCodeList(List.of());
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, errorCode));
 
 		SqlQuery query = null;
 		try {
-			query = agent.query("example/select_product").param("product_id", Arrays.asList(0, 1))
+			query = agent.query("example/select_product")
+					.param("product_id", List.of(0, 1))
 					.retry(retryCount - 1);
 			query.collect();
 			fail();
@@ -233,11 +265,14 @@ public class SqlAgentRetryTest {
 	@Test
 	void testUpdateRetryNoWait() throws Exception {
 		var retryCount = 3;
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 60));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, 60));
 
-		var update = agent.update("example/insert_product_regist_work").param("product_name", "test")
-				.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
-				.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount + 1);
+		var update = agent.update("example/insert_product_regist_work")
+				.param("product_name", "test")
+				.param("product_kana_name", "test_kana")
+				.param("jan_code", "1234567890123")
+				.param("product_description", "")
+				.param("ins_datetime", LocalDate.now()).retry(retryCount + 1);
 		update.count();
 		assertThat(update.context().contextAttrs().get("__retryCount"), is(retryCount));
 	}
@@ -248,11 +283,14 @@ public class SqlAgentRetryTest {
 	@Test
 	void testUpdateRetryNoWaitSqlState() throws Exception {
 		var retryCount = 3;
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 0, "60"));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, 0, "60"));
 
-		var update = agent.update("example/insert_product_regist_work").param("product_name", "test")
-				.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
-				.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount + 1);
+		var update = agent.update("example/insert_product_regist_work")
+				.param("product_name", "test")
+				.param("product_kana_name", "test_kana")
+				.param("jan_code", "1234567890123")
+				.param("product_description", "")
+				.param("ins_datetime", LocalDate.now()).retry(retryCount + 1);
 		update.count();
 		assertThat(update.context().contextAttrs().get("__retryCount"), is(retryCount));
 	}
@@ -263,11 +301,14 @@ public class SqlAgentRetryTest {
 	@Test
 	void testUpdateRetryWait() throws Exception {
 		var retryCount = 3;
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 60));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, 60));
 
-		var update = agent.update("example/insert_product_regist_work").param("product_name", "test")
-				.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
-				.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount + 1, 10);
+		var update = agent.update("example/insert_product_regist_work")
+				.param("product_name", "test")
+				.param("product_kana_name", "test_kana")
+				.param("jan_code", "1234567890123")
+				.param("product_description", "")
+				.param("ins_datetime", LocalDate.now()).retry(retryCount + 1, 10);
 		update.count();
 		assertThat(update.context().contextAttrs().get("__retryCount"), is(retryCount));
 	}
@@ -278,11 +319,14 @@ public class SqlAgentRetryTest {
 	@Test
 	void testUpdateRetryWaitSqlState() throws Exception {
 		var retryCount = 3;
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 0, "60"));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, 0, "60"));
 
-		var update = agent.update("example/insert_product_regist_work").param("product_name", "test")
-				.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
-				.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount + 1, 10);
+		var update = agent.update("example/insert_product_regist_work")
+				.param("product_name", "test")
+				.param("product_kana_name", "test_kana")
+				.param("jan_code", "1234567890123")
+				.param("product_description", "")
+				.param("ins_datetime", LocalDate.now()).retry(retryCount + 1, 10);
 		update.count();
 		assertThat(update.context().contextAttrs().get("__retryCount"), is(retryCount));
 	}
@@ -294,13 +338,16 @@ public class SqlAgentRetryTest {
 	void testUpdateRetryOver() throws Exception {
 		var retryCount = 3;
 		var errorCode = 60;
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, errorCode));
 
 		SqlUpdate update = null;
 		try {
-			update = agent.update("example/insert_product_regist_work").param("product_name", "test")
-					.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
-					.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
+			update = agent.update("example/insert_product_regist_work")
+					.param("product_name", "test")
+					.param("product_kana_name", "test_kana")
+					.param("jan_code", "1234567890123")
+					.param("product_description", "")
+					.param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
 			update.count();
 			fail();
 		} catch (UroborosqlSQLException ex) {
@@ -317,13 +364,16 @@ public class SqlAgentRetryTest {
 		var retryCount = 3;
 		var errorCode = 0;
 		var sqlState = "60";
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode, sqlState));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, errorCode, sqlState));
 
 		SqlUpdate update = null;
 		try {
-			update = agent.update("example/insert_product_regist_work").param("product_name", "test")
-					.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
-					.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
+			update = agent.update("example/insert_product_regist_work")
+					.param("product_name", "test")
+					.param("product_kana_name", "test_kana")
+					.param("jan_code", "1234567890123")
+					.param("product_description", "")
+					.param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
 			update.count();
 			fail();
 		} catch (UroborosqlSQLException ex) {
@@ -334,19 +384,47 @@ public class SqlAgentRetryTest {
 	}
 
 	/**
+	 * 更新のリトライ（デフォルトリトライ回数指定時の個別リトライのOFF）
+	 */
+	@Test
+	void testUpdateRetryOff() throws Exception {
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(3, 60));
+		config.getSqlAgentProvider().setDefaultMaxRetryCount(3);
+
+		SqlUpdate update = null;
+		try {
+			update = agent.update("example/insert_product_regist_work")
+					.param("product_name", "test")
+					.param("product_kana_name", "test_kana")
+					.param("jan_code", "1234567890123")
+					.param("product_description", "")
+					.param("ins_datetime", LocalDate.now()).retry(0);
+			update.count();
+			fail();
+		} catch (UroborosqlSQLException ex) {
+			assertThat(update.context().contextAttrs().get("__retryCount"), is(0));
+		} finally {
+			config.getSqlAgentProvider().setDefaultMaxRetryCount(0);
+		}
+	}
+
+	/**
 	 * 更新のリトライ（リトライ対象外のエラー発生）
 	 */
 	@Test
 	void testUpdateNotRetry() throws Exception {
 		var retryCount = 3;
 		var errorCode = 1;
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, errorCode));
 
 		SqlUpdate update = null;
 		try {
-			update = agent.update("example/insert_product_regist_work").param("product_name", "test")
-					.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
-					.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
+			update = agent.update("example/insert_product_regist_work")
+					.param("product_name", "test")
+					.param("product_kana_name", "test_kana")
+					.param("jan_code", "1234567890123")
+					.param("product_description", "")
+					.param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
 			update.count();
 			fail();
 		} catch (UroborosqlSQLException ex) {
@@ -363,13 +441,16 @@ public class SqlAgentRetryTest {
 		var retryCount = 3;
 		var errorCode = 0;
 		var sqlState = "1";
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode, sqlState));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, errorCode, sqlState));
 
 		SqlUpdate update = null;
 		try {
-			update = agent.update("example/insert_product_regist_work").param("product_name", "test")
-					.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
-					.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
+			update = agent.update("example/insert_product_regist_work")
+					.param("product_name", "test")
+					.param("product_kana_name", "test_kana")
+					.param("jan_code", "1234567890123")
+					.param("product_description", "")
+					.param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
 			update.count();
 			fail();
 		} catch (UroborosqlSQLException ex) {
@@ -385,7 +466,7 @@ public class SqlAgentRetryTest {
 	@Test
 	void testBatchRetryNoWait() throws Exception {
 		var retryCount = 3;
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 60));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, 60));
 
 		var paramList = new ArrayList<Map<String, Object>>();
 		var paramMap = new HashMap<String, Object>();
@@ -417,11 +498,14 @@ public class SqlAgentRetryTest {
 	@Test
 	void testProcedureRetryNoWait() throws Exception {
 		var retryCount = 3;
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 60));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, 60));
 
-		var proc = agent.proc("example/insert_product_regist_work").param("product_name", "test")
-				.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
-				.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount + 1);
+		var proc = agent.proc("example/insert_product_regist_work")
+				.param("product_name", "test")
+				.param("product_kana_name", "test_kana")
+				.param("jan_code", "1234567890123")
+				.param("product_description", "")
+				.param("ins_datetime", LocalDate.now()).retry(retryCount + 1);
 		proc.call();
 		assertThat(proc.context().contextAttrs().get("__retryCount"), is(retryCount));
 	}
@@ -432,11 +516,14 @@ public class SqlAgentRetryTest {
 	@Test
 	void testProcedureRetryNoWaitSqlState() throws Exception {
 		var retryCount = 3;
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 0, "60"));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, 0, "60"));
 
-		var proc = agent.proc("example/insert_product_regist_work").param("product_name", "test")
-				.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
-				.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount + 1);
+		var proc = agent.proc("example/insert_product_regist_work")
+				.param("product_name", "test")
+				.param("product_kana_name", "test_kana")
+				.param("jan_code", "1234567890123")
+				.param("product_description", "")
+				.param("ins_datetime", LocalDate.now()).retry(retryCount + 1);
 		proc.call();
 		assertThat(proc.context().contextAttrs().get("__retryCount"), is(retryCount));
 	}
@@ -447,11 +534,14 @@ public class SqlAgentRetryTest {
 	@Test
 	void testProcedureRetryWait() throws Exception {
 		var retryCount = 3;
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 60));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, 60));
 
-		var proc = agent.proc("example/insert_product_regist_work").param("product_name", "test")
-				.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
-				.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount + 1, 10);
+		var proc = agent.proc("example/insert_product_regist_work")
+				.param("product_name", "test")
+				.param("product_kana_name", "test_kana")
+				.param("jan_code", "1234567890123")
+				.param("product_description", "")
+				.param("ins_datetime", LocalDate.now()).retry(retryCount + 1, 10);
 		proc.call();
 		assertThat(proc.context().contextAttrs().get("__retryCount"), is(retryCount));
 	}
@@ -462,11 +552,14 @@ public class SqlAgentRetryTest {
 	@Test
 	void testProcedureRetryWaitSqlState() throws Exception {
 		var retryCount = 3;
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 0, "60"));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, 0, "60"));
 
-		var proc = agent.proc("example/insert_product_regist_work").param("product_name", "test")
-				.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
-				.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount + 1, 10);
+		var proc = agent.proc("example/insert_product_regist_work")
+				.param("product_name", "test")
+				.param("product_kana_name", "test_kana")
+				.param("jan_code", "1234567890123")
+				.param("product_description", "")
+				.param("ins_datetime", LocalDate.now()).retry(retryCount + 1, 10);
 		proc.call();
 		assertThat(proc.context().contextAttrs().get("__retryCount"), is(retryCount));
 	}
@@ -478,13 +571,16 @@ public class SqlAgentRetryTest {
 	void testProcedureRetryOver() throws Exception {
 		var retryCount = 3;
 		var errorCode = 60;
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, errorCode));
 
 		Procedure proc = null;
 		try {
-			proc = agent.proc("example/insert_product_regist_work").param("product_name", "test")
-					.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
-					.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
+			proc = agent.proc("example/insert_product_regist_work")
+					.param("product_name", "test")
+					.param("product_kana_name", "test_kana")
+					.param("jan_code", "1234567890123")
+					.param("product_description", "")
+					.param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
 			proc.call();
 			fail();
 		} catch (SQLException ex) {
@@ -501,13 +597,16 @@ public class SqlAgentRetryTest {
 		var retryCount = 3;
 		var errorCode = 0;
 		var sqlState = "60";
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode, sqlState));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, errorCode, sqlState));
 
 		Procedure proc = null;
 		try {
-			proc = agent.proc("example/insert_product_regist_work").param("product_name", "test")
-					.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
-					.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
+			proc = agent.proc("example/insert_product_regist_work")
+					.param("product_name", "test")
+					.param("product_kana_name", "test_kana")
+					.param("jan_code", "1234567890123")
+					.param("product_description", "")
+					.param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
 			proc.call();
 			fail();
 		} catch (SQLException ex) {
@@ -518,19 +617,47 @@ public class SqlAgentRetryTest {
 	}
 
 	/**
+	 * プロシージャのリトライ（デフォルトリトライ回数指定時の個別リトライのOFF）
+	 */
+	@Test
+	void testProcedureRetryOff() throws Exception {
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(3, 60));
+		config.getSqlAgentProvider().setDefaultMaxRetryCount(3);
+
+		Procedure proc = null;
+		try {
+			proc = agent.proc("example/insert_product_regist_work")
+					.param("product_name", "test")
+					.param("product_kana_name", "test_kana")
+					.param("jan_code", "1234567890123")
+					.param("product_description", "")
+					.param("ins_datetime", LocalDate.now()).retry(0);
+			proc.call();
+			fail();
+		} catch (SQLException ex) {
+			assertThat(proc.context().contextAttrs().get("__retryCount"), is(0));
+		} finally {
+			config.getSqlAgentProvider().setDefaultMaxRetryCount(0);
+		}
+	}
+
+	/**
 	 * プロシージャのリトライ（リトライ対象外のエラー発生）
 	 */
 	@Test
 	void testProcedureNoRetry() throws Exception {
 		var retryCount = 3;
 		var errorCode = 1;
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, errorCode));
 
 		Procedure proc = null;
 		try {
-			proc = agent.proc("example/insert_product_regist_work").param("product_name", "test")
-					.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
-					.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
+			proc = agent.proc("example/insert_product_regist_work")
+					.param("product_name", "test")
+					.param("product_kana_name", "test_kana")
+					.param("jan_code", "1234567890123")
+					.param("product_description", "")
+					.param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
 			proc.call();
 			fail();
 		} catch (SQLException ex) {
@@ -547,13 +674,16 @@ public class SqlAgentRetryTest {
 		var retryCount = 3;
 		var errorCode = 0;
 		var sqlState = "1";
-		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode, sqlState));
+		config.getEventListenerHolder().addEventSubscriber(new RetryEventSubscriber(retryCount, errorCode, sqlState));
 
 		Procedure proc = null;
 		try {
-			proc = agent.proc("example/insert_product_regist_work").param("product_name", "test")
-					.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
-					.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
+			proc = agent.proc("example/insert_product_regist_work")
+					.param("product_name", "test")
+					.param("product_kana_name", "test_kana")
+					.param("jan_code", "1234567890123")
+					.param("product_description", "")
+					.param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
 			proc.call();
 			fail();
 		} catch (SQLException ex) {
@@ -564,21 +694,21 @@ public class SqlAgentRetryTest {
 	}
 
 	/**
-	 * リトライテスト用の例外をスローするフィルター
+	 * リトライテスト用の例外をスローするイベントサブスクライバ
 	 *
 	 * @author H.Sugimoto
 	 */
-	private final class RetrySqlFilter extends AbstractSqlFilter {
+	private final class RetryEventSubscriber extends EventSubscriber {
 		private int retryCount = 0;
 		private int currentCount = 0;
 		private int errorCode = -1;
 		private String sqlState = "";
 
-		public RetrySqlFilter(final int retryCount, final int errorCode) {
+		public RetryEventSubscriber(final int retryCount, final int errorCode) {
 			this(retryCount, errorCode, "23000");
 		}
 
-		public RetrySqlFilter(final int retryCount, final int errorCode, final String sqlState) {
+		public RetryEventSubscriber(final int retryCount, final int errorCode, final String sqlState) {
 			this.retryCount = retryCount;
 			this.currentCount = 0;
 			this.errorCode = errorCode;
@@ -586,69 +716,37 @@ public class SqlAgentRetryTest {
 		}
 
 		/**
+		 *
 		 * {@inheritDoc}
 		 *
-		 * @see jp.co.future.uroborosql.filter.AbstractSqlFilter#doQuery(jp.co.future.uroborosql.context.ExecutionContext, java.sql.PreparedStatement, java.sql.ResultSet)
+		 * @see jp.co.future.uroborosql.event.subscriber.EventSubscriber#initialize()
 		 */
 		@Override
-		public ResultSet doQuery(final ExecutionContext ExecutionContext, final PreparedStatement preparedStatement,
-				final ResultSet resultSet) throws SQLException {
-			if (retryCount > currentCount++) {
-				preparedStatement.getConnection().rollback();
-				throw new SQLException("Test Retry Exception", sqlState, errorCode);
-			}
-
-			return super.doQuery(ExecutionContext, preparedStatement, resultSet);
-		}
-
-		/**
-		 * {@inheritDoc}
-		 *
-		 * @see jp.co.future.uroborosql.filter.AbstractSqlFilter#doUpdate(jp.co.future.uroborosql.context.ExecutionContext, java.sql.PreparedStatement, int)
-		 */
-		@Override
-		public int doUpdate(final ExecutionContext ExecutionContext, final PreparedStatement preparedStatement,
-				final int result)
-				throws SQLException {
-			if (retryCount > currentCount++) {
-				preparedStatement.getConnection().rollback();
-				throw new SQLException("Test Retry Exception", sqlState, errorCode);
-			}
-
-			return super.doUpdate(ExecutionContext, preparedStatement, result);
-		}
-
-		/**
-		 * {@inheritDoc}
-		 *
-		 * @see jp.co.future.uroborosql.filter.AbstractSqlFilter#doBatch(jp.co.future.uroborosql.context.ExecutionContext, java.sql.PreparedStatement, int[])
-		 */
-		@Override
-		public int[] doBatch(final ExecutionContext ExecutionContext, final PreparedStatement preparedStatement,
-				final int[] result)
-				throws SQLException {
-			if (retryCount > currentCount++) {
-				preparedStatement.getConnection().rollback();
-				throw new SQLException("Test Retry Exception", sqlState, errorCode);
-			}
-
-			return super.doBatch(ExecutionContext, preparedStatement, result);
-		}
-
-		/**
-		 * {@inheritDoc}
-		 *
-		 * @see jp.co.future.uroborosql.filter.AbstractSqlFilter#doProcedure(jp.co.future.uroborosql.context.ExecutionContext, java.sql.CallableStatement, boolean)
-		 */
-		@Override
-		public boolean doProcedure(final ExecutionContext ExecutionContext, final CallableStatement callableStatement,
-				final boolean result) throws SQLException {
-			if (retryCount > currentCount++) {
-				callableStatement.getConnection().rollback();
-				throw new SQLException("Test Retry Exception", sqlState, errorCode);
-			}
-
-			return super.doProcedure(ExecutionContext, callableStatement, result);
+		public void initialize() {
+			sqlQueryListener(evt -> {
+				if (retryCount > currentCount++) {
+					evt.getPreparedStatement().getConnection().rollback();
+					throw new SQLException("Test Retry Exception", sqlState, errorCode);
+				}
+			});
+			sqlUpdateListener(evt -> {
+				if (retryCount > currentCount++) {
+					evt.getPreparedStatement().getConnection().rollback();
+					throw new SQLException("Test Retry Exception", sqlState, errorCode);
+				}
+			});
+			sqlBatchListener(evt -> {
+				if (retryCount > currentCount++) {
+					evt.getPreparedStatement().getConnection().rollback();
+					throw new SQLException("Test Retry Exception", sqlState, errorCode);
+				}
+			});
+			procedureListener(evt -> {
+				if (retryCount > currentCount++) {
+					evt.getCallableStatement().getConnection().rollback();
+					throw new SQLException("Test Retry Exception", sqlState, errorCode);
+				}
+			});
 		}
 	}
 }
