@@ -3,6 +3,7 @@ package jp.co.future.uroborosql;
 import static org.hamcrest.CoreMatchers.instanceOf;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -32,7 +33,6 @@ import java.time.Year;
 import java.time.YearMonth;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.HashSet;
@@ -48,16 +48,18 @@ import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import jp.co.future.uroborosql.context.ExecutionContext;
+import jp.co.future.uroborosql.bean.ProductSearchBean;
 import jp.co.future.uroborosql.converter.MapResultSetConverter;
+import jp.co.future.uroborosql.enums.InsertsType;
+import jp.co.future.uroborosql.event.subscriber.WrapContextEventSubscriber;
 import jp.co.future.uroborosql.exception.DataNonUniqueException;
 import jp.co.future.uroborosql.exception.DataNotFoundException;
 import jp.co.future.uroborosql.exception.UroborosqlRuntimeException;
-import jp.co.future.uroborosql.filter.AbstractSqlFilter;
-import jp.co.future.uroborosql.filter.WrapContextSqlFilter;
 import jp.co.future.uroborosql.mapping.annotations.Domain;
+import jp.co.future.uroborosql.model.Product;
 import jp.co.future.uroborosql.utils.CaseFormat;
 
 /**
@@ -77,7 +79,8 @@ public class SqlQueryTest extends AbstractDbTest {
 		List<BigDecimal> productIdList = new ArrayList<>();
 		productIdList.add(new BigDecimal("0"));
 		productIdList.add(new BigDecimal("2"));
-		var ctx = agent.contextFrom("example/select_product").param("product_id", productIdList)
+		var ctx = agent.context().setSqlName("example/select_product")
+				.param("product_id", productIdList)
 				.setSqlId("test_sql_id");
 
 		var rs = agent.query(ctx);
@@ -102,7 +105,7 @@ public class SqlQueryTest extends AbstractDbTest {
 		Set<BigDecimal> params = new HashSet<>();
 		params.add(new BigDecimal("0"));
 		params.add(new BigDecimal("2"));
-		var ctx = agent.contextFrom("example/select_product")
+		var ctx = agent.context().setSqlName("example/select_product")
 				.param("product_id", params)
 				.setSqlId("test_sql_id");
 
@@ -125,14 +128,12 @@ public class SqlQueryTest extends AbstractDbTest {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
-		var manager = config.getSqlFilterManager();
-		var filter = new WrapContextSqlFilter("",
-				"LIMIT /*$maxRowCount*/10 OFFSET /*$startRowIndex*/0", ".*(FOR\\sUPDATE|\\.NEXTVAL).*");
-		filter.initialize();
-		manager.addSqlFilter(filter);
+		config.getEventListenerHolder().addEventSubscriber(new WrapContextEventSubscriber("",
+				"LIMIT /*$maxRowCount*/10 OFFSET /*$startRowIndex*/0", ".*(FOR\\sUPDATE|\\.NEXTVAL).*"));
 
-		var ctx = agent.contextFrom("example/select_product")
-				.param("product_id", Arrays.asList(new BigDecimal("0"), new BigDecimal("1"))).param("startRowIndex", 0)
+		var ctx = agent.context().setSqlName("example/select_product")
+				.param("product_id", List.of(new BigDecimal("0"), new BigDecimal("1")))
+				.param("startRowIndex", 0)
 				.param("maxRowCount", 1);
 
 		var rs = agent.query(ctx);
@@ -147,20 +148,15 @@ public class SqlQueryTest extends AbstractDbTest {
 	}
 
 	/**
-	 * SQLのdoTransformフィルターのテストケース。
+	 * SQLのdoTransformイベントリスナーのテストケース。
 	 */
 	@Test
 	void testQueryFilterQueryWith() throws Exception {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
-		var manager = config.getSqlFilterManager();
-		manager.addSqlFilter(new AbstractSqlFilter() {
-			@Override
-			public String doTransformSql(final ExecutionContext ExecutionContext, final String sql) {
-				return String.format("select * from (%s)", sql);
-			}
-		});
+		config.getEventListenerHolder()
+				.addTransformSqlListener(evt -> evt.setSql(String.format("select * from (%s)", evt.getSql())));
 
 		var query = agent.queryWith("select product_id from product");
 		var results = query.collect();
@@ -185,6 +181,26 @@ public class SqlQueryTest extends AbstractDbTest {
 	}
 
 	/**
+	 * クエリ実行処理のテストケース（SQLがNULLの場合）。
+	 */
+	@Test
+	void testQueryWithSqlNull() throws Exception {
+		Assertions.assertThrowsExactly(IllegalArgumentException.class, () -> {
+			agent.queryWith(null);
+		});
+	}
+
+	/**
+	 * クエリ実行処理のテストケース（SQLがEmptyの場合）。
+	 */
+	@Test
+	void testQueryWithSqlEmpty() throws Exception {
+		Assertions.assertThrowsExactly(IllegalArgumentException.class, () -> {
+			agent.queryWith("");
+		});
+	}
+
+	/**
 	 * クエリ実行処理のテストケース。
 	 */
 	@Test
@@ -192,8 +208,9 @@ public class SqlQueryTest extends AbstractDbTest {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
-		var ctx = agent.contextFrom("example/select_product").param("product_id",
-				Arrays.asList(0, 1, 2, 3));
+		var ctx = agent.context().setSqlName("example/select_product")
+				.param("product_id",
+						List.of(0, 1, 2, 3));
 
 		var rs = agent.query(ctx);
 		assertNotNull(rs, "ResultSetが取得できませんでした。");
@@ -213,7 +230,9 @@ public class SqlQueryTest extends AbstractDbTest {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
-		var rs = agent.query("example/select_product").param("product_id", Arrays.asList(0, 1, 2, 3)).resultSet();
+		var rs = agent.query("example/select_product")
+				.param("product_id", List.of(0, 1, 2, 3))
+				.resultSet();
 		assertNotNull(rs, "ResultSetが取得できませんでした。");
 		assertTrue(rs.next(), "結果が0件です。");
 		assertEquals("0", rs.getString("PRODUCT_ID"));
@@ -232,7 +251,7 @@ public class SqlQueryTest extends AbstractDbTest {
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
 		var ans = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(0, 1, 2, 3))
+				.param("product_id", List.of(0, 1, 2, 3))
 				.collect();
 		assertEquals(2, ans.size(), "結果の件数が一致しません。");
 		var map = ans.get(0);
@@ -259,7 +278,8 @@ public class SqlQueryTest extends AbstractDbTest {
 
 		var startTime = Instant.now();
 
-		agent.query("example/select_product").collect();
+		agent.query("example/select_product")
+				.collect();
 
 		var finishTime = Instant.now();
 		var elapsedTime = Duration.between(startTime, finishTime);
@@ -276,7 +296,7 @@ public class SqlQueryTest extends AbstractDbTest {
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
 		var ans = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(0, 1, 2, 3))
+				.param("product_id", List.of(0, 1, 2, 3))
 				.collect(CaseFormat.LOWER_SNAKE_CASE);
 		assertEquals(2, ans.size(), "結果の件数が一致しません。");
 		var map = ans.get(0);
@@ -295,7 +315,8 @@ public class SqlQueryTest extends AbstractDbTest {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
-		List<Product> ans = agent.query("example/select_product").param("product_id", Arrays.asList(0, 1, 2, 3))
+		List<Product> ans = agent.query("example/select_product")
+				.param("product_id", List.of(0, 1, 2, 3))
 				.collect(Product.class);
 		assertEquals(2, ans.size(), "結果の件数が一致しません。");
 		var product = ans.get(0);
@@ -314,7 +335,8 @@ public class SqlQueryTest extends AbstractDbTest {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
-		List<Integer> ans = agent.query("example/select_product").param("product_id", Arrays.asList(0, 1, 2, 3))
+		List<Integer> ans = agent.query("example/select_product")
+				.param("product_id", List.of(0, 1, 2, 3))
 				.collect(Integer.class);
 		assertEquals(2, ans.size(), "結果の件数が一致しません。");
 		assertThat(ans.get(0), is(0));
@@ -361,7 +383,7 @@ public class SqlQueryTest extends AbstractDbTest {
 		agent = config.agent();
 
 		var ans = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(0, 1, 2, 3))
+				.param("product_id", List.of(0, 1, 2, 3))
 				.collect();
 		assertEquals(2, ans.size(), "結果の件数が一致しません。");
 		var map = ans.get(0);
@@ -381,12 +403,15 @@ public class SqlQueryTest extends AbstractDbTest {
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
 		try {
-			agent.query("example/select_product").param("product_id", Arrays.asList(10)).first();
+			agent.query("example/select_product")
+					.param("product_id", List.of(10))
+					.first();
 			assertTrue(false);
 		} catch (DataNotFoundException e) {
 			// OK
 		}
-		var map = agent.query("example/select_product").param("product_id", Arrays.asList(0, 1, 2, 3))
+		var map = agent.query("example/select_product")
+				.param("product_id", List.of(0, 1, 2, 3))
 				.first();
 		assertEquals(new BigDecimal("0"), map.get("PRODUCT_ID"));
 		assertEquals("商品名0", map.get("PRODUCT_NAME"));
@@ -403,19 +428,23 @@ public class SqlQueryTest extends AbstractDbTest {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 		try {
-			agent.query("example/select_product").param("product_id", Arrays.asList(10)).one();
+			agent.query("example/select_product")
+					.param("product_id", List.of(10))
+					.one();
 			assertTrue(false);
 		} catch (DataNotFoundException e) {
 			// OK
 		}
 		try {
-			agent.query("example/select_product").param("product_id", Arrays.asList(0, 1, 2, 3)).one();
+			agent.query("example/select_product")
+					.param("product_id", List.of(0, 1, 2, 3))
+					.one();
 			assertTrue(false);
 		} catch (DataNonUniqueException e) {
 			// OK
 		}
 		var map = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(0))
+				.param("product_id", List.of(0))
 				.one();
 		assertEquals(new BigDecimal("0"), map.get("PRODUCT_ID"));
 		assertEquals("商品名0", map.get("PRODUCT_NAME"));
@@ -440,12 +469,15 @@ public class SqlQueryTest extends AbstractDbTest {
 		agent = config.agent();
 
 		try {
-			agent.query("example/select_product").param("product_id", Arrays.asList(10)).first();
+			agent.query("example/select_product")
+					.param("product_id", List.of(10))
+					.first();
 			assertTrue(false);
 		} catch (DataNotFoundException e) {
 			// OK
 		}
-		var map = agent.query("example/select_product").param("product_id", Arrays.asList(0, 1, 2, 3))
+		var map = agent.query("example/select_product")
+				.param("product_id", List.of(0, 1, 2, 3))
 				.first();
 		assertEquals(new BigDecimal("0"), map.get("product_id"));
 		assertEquals("商品名0", map.get("product_name"));
@@ -469,21 +501,23 @@ public class SqlQueryTest extends AbstractDbTest {
 		config.getSqlAgentProvider().setDefaultMapKeyCaseFormat(CaseFormat.LOWER_SNAKE_CASE);
 		agent = config.agent();
 		try {
-			agent.query("example/select_product").param("product_id", Arrays.asList(10)).one();
+			agent.query("example/select_product")
+					.param("product_id", List.of(10))
+					.one();
 			assertTrue(false);
 		} catch (DataNotFoundException e) {
 			// OK
 		}
 		try {
 			agent.query("example/select_product")
-					.param("product_id", Arrays.asList(0, 1, 2, 3))
+					.param("product_id", List.of(0, 1, 2, 3))
 					.one();
 			assertTrue(false);
 		} catch (DataNonUniqueException e) {
 			// OK
 		}
 		var map = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(0))
+				.param("product_id", List.of(0))
 				.one();
 		assertEquals(new BigDecimal("0"), map.get("product_id"));
 		assertEquals("商品名0", map.get("product_name"));
@@ -501,7 +535,7 @@ public class SqlQueryTest extends AbstractDbTest {
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
 		var optional = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(0, 1, 2, 3)).findFirst();
+				.param("product_id", List.of(0, 1, 2, 3)).findFirst();
 		assertTrue(optional.isPresent());
 
 		var map = optional.get();
@@ -511,7 +545,8 @@ public class SqlQueryTest extends AbstractDbTest {
 		assertEquals("1234567890123", map.get("JAN_CODE"));
 		assertEquals("0番目の商品", map.get("PRODUCT_DESCRIPTION"));
 
-		optional = agent.query("example/select_product").param("product_id", Arrays.asList(4)).findFirst();
+		optional = agent.query("example/select_product")
+				.param("product_id", List.of(4)).findFirst();
 		assertFalse(optional.isPresent());
 	}
 
@@ -525,14 +560,14 @@ public class SqlQueryTest extends AbstractDbTest {
 
 		try {
 			agent.query("example/select_product")
-					.param("product_id", Arrays.asList(0, 1, 2, 3)).findOne();
+					.param("product_id", List.of(0, 1, 2, 3)).findOne();
 			assertTrue(false);
 		} catch (DataNonUniqueException e) {
 			// OK
 		}
 
 		var optional = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(0)).findOne();
+				.param("product_id", List.of(0)).findOne();
 		assertTrue(optional.isPresent());
 
 		var map = optional.get();
@@ -542,7 +577,8 @@ public class SqlQueryTest extends AbstractDbTest {
 		assertEquals("1234567890123", map.get("JAN_CODE"));
 		assertEquals("0番目の商品", map.get("PRODUCT_DESCRIPTION"));
 
-		optional = agent.query("example/select_product").param("product_id", Arrays.asList(4)).findOne();
+		optional = agent.query("example/select_product")
+				.param("product_id", List.of(4)).findOne();
 		assertFalse(optional.isPresent());
 	}
 
@@ -562,7 +598,7 @@ public class SqlQueryTest extends AbstractDbTest {
 		agent = config.agent();
 
 		var optional = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(0, 1, 2, 3)).findFirst();
+				.param("product_id", List.of(0, 1, 2, 3)).findFirst();
 		assertTrue(optional.isPresent());
 
 		var map = optional.get();
@@ -572,7 +608,8 @@ public class SqlQueryTest extends AbstractDbTest {
 		assertEquals("1234567890123", map.get("jan_code"));
 		assertEquals("0番目の商品", map.get("product_description"));
 
-		optional = agent.query("example/select_product").param("product_id", Arrays.asList(4)).findFirst();
+		optional = agent.query("example/select_product")
+				.param("product_id", List.of(4)).findFirst();
 		assertFalse(optional.isPresent());
 	}
 
@@ -592,14 +629,14 @@ public class SqlQueryTest extends AbstractDbTest {
 		agent = config.agent();
 		try {
 			agent.query("example/select_product")
-					.param("product_id", Arrays.asList(0, 1, 2, 3))
+					.param("product_id", List.of(0, 1, 2, 3))
 					.findOne();
 			assertTrue(false);
 		} catch (DataNonUniqueException e) {
 			// OK
 		}
 		var optional = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(0))
+				.param("product_id", List.of(0))
 				.findOne();
 		assertTrue(optional.isPresent());
 
@@ -610,7 +647,8 @@ public class SqlQueryTest extends AbstractDbTest {
 		assertEquals("1234567890123", map.get("jan_code"));
 		assertEquals("0番目の商品", map.get("product_description"));
 
-		optional = agent.query("example/select_product").param("product_id", Arrays.asList(4)).findOne();
+		optional = agent.query("example/select_product")
+				.param("product_id", List.of(4)).findOne();
 		assertFalse(optional.isPresent());
 	}
 
@@ -624,13 +662,14 @@ public class SqlQueryTest extends AbstractDbTest {
 
 		try {
 			agent.query("example/select_product")
-					.param("product_id", Arrays.asList(10))
+					.param("product_id", List.of(10))
 					.first(CaseFormat.LOWER_SNAKE_CASE);
 			assertTrue(false);
 		} catch (DataNotFoundException e) {
 			// OK
 		}
-		var map = agent.query("example/select_product").param("product_id", Arrays.asList(0, 1, 2, 3))
+		var map = agent.query("example/select_product")
+				.param("product_id", List.of(0, 1, 2, 3))
 				.first(CaseFormat.LOWER_SNAKE_CASE);
 		assertEquals(new BigDecimal("0"), map.get("product_id"));
 		assertEquals("商品名0", map.get("product_name"));
@@ -649,7 +688,7 @@ public class SqlQueryTest extends AbstractDbTest {
 
 		try {
 			agent.query("example/select_product")
-					.param("product_id", Arrays.asList(10))
+					.param("product_id", List.of(10))
 					.one(CaseFormat.LOWER_SNAKE_CASE);
 			assertTrue(false);
 		} catch (DataNotFoundException e) {
@@ -657,14 +696,14 @@ public class SqlQueryTest extends AbstractDbTest {
 		}
 		try {
 			agent.query("example/select_product")
-					.param("product_id", Arrays.asList(0, 1, 2, 3))
+					.param("product_id", List.of(0, 1, 2, 3))
 					.one(CaseFormat.LOWER_SNAKE_CASE);
 			assertTrue(false);
 		} catch (DataNonUniqueException e) {
 			// OK
 		}
 		var map = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(0))
+				.param("product_id", List.of(0))
 				.one(CaseFormat.LOWER_SNAKE_CASE);
 		assertEquals(new BigDecimal("0"), map.get("product_id"));
 		assertEquals("商品名0", map.get("product_name"));
@@ -682,7 +721,7 @@ public class SqlQueryTest extends AbstractDbTest {
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
 		var optional = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(0, 1, 2, 3)).findFirst(CaseFormat.PASCAL_CASE);
+				.param("product_id", List.of(0, 1, 2, 3)).findFirst(CaseFormat.PASCAL_CASE);
 		assertTrue(optional.isPresent());
 
 		var map = optional.get();
@@ -692,7 +731,8 @@ public class SqlQueryTest extends AbstractDbTest {
 		assertEquals("1234567890123", map.get("JanCode"));
 		assertEquals("0番目の商品", map.get("ProductDescription"));
 
-		optional = agent.query("example/select_product").param("product_id", Arrays.asList(4)).findFirst();
+		optional = agent.query("example/select_product")
+				.param("product_id", List.of(4)).findFirst();
 		assertFalse(optional.isPresent());
 	}
 
@@ -706,14 +746,14 @@ public class SqlQueryTest extends AbstractDbTest {
 
 		try {
 			agent.query("example/select_product")
-					.param("product_id", Arrays.asList(0, 1, 2, 3))
+					.param("product_id", List.of(0, 1, 2, 3))
 					.findOne(CaseFormat.PASCAL_CASE);
 			assertTrue(false);
 		} catch (DataNonUniqueException e) {
 			// OK
 		}
 		var optional = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(0))
+				.param("product_id", List.of(0))
 				.findOne(CaseFormat.PASCAL_CASE);
 		assertTrue(optional.isPresent());
 
@@ -724,7 +764,8 @@ public class SqlQueryTest extends AbstractDbTest {
 		assertEquals("1234567890123", map.get("JanCode"));
 		assertEquals("0番目の商品", map.get("ProductDescription"));
 
-		optional = agent.query("example/select_product").param("product_id", Arrays.asList(4)).findOne();
+		optional = agent.query("example/select_product")
+				.param("product_id", List.of(4)).findOne();
 		assertFalse(optional.isPresent());
 	}
 
@@ -738,14 +779,14 @@ public class SqlQueryTest extends AbstractDbTest {
 
 		try {
 			agent.query("example/select_product")
-					.param("product_id", Arrays.asList(10))
+					.param("product_id", List.of(10))
 					.first(Product.class);
 			assertTrue(false);
 		} catch (DataNotFoundException e) {
 			// OK
 		}
 		var product = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(0, 1, 2, 3))
+				.param("product_id", List.of(0, 1, 2, 3))
 				.first(Product.class);
 
 		assertEquals(0, product.getProductId());
@@ -777,7 +818,7 @@ public class SqlQueryTest extends AbstractDbTest {
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
 		Optional<Product> optional = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(0, 1, 2, 3))
+				.param("product_id", List.of(0, 1, 2, 3))
 				.findFirst(Product.class);
 
 		assertTrue(optional.isPresent());
@@ -791,7 +832,7 @@ public class SqlQueryTest extends AbstractDbTest {
 		assertEquals("0番目の商品", product.getProductDescription());
 
 		optional = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(4))
+				.param("product_id", List.of(4))
 				.findFirst(Product.class);
 
 		assertFalse(optional.isPresent());
@@ -819,7 +860,7 @@ public class SqlQueryTest extends AbstractDbTest {
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 		try {
 			agent.query("example/select_product")
-					.param("product_id", Arrays.asList(10))
+					.param("product_id", List.of(10))
 					.first(Product.class);
 			assertTrue(false);
 		} catch (DataNotFoundException e) {
@@ -827,14 +868,14 @@ public class SqlQueryTest extends AbstractDbTest {
 		}
 		try {
 			agent.query("example/select_product")
-					.param("product_id", Arrays.asList(0, 1, 2, 3))
+					.param("product_id", List.of(0, 1, 2, 3))
 					.one(Product.class);
 			assertTrue(false);
 		} catch (DataNonUniqueException e) {
 			// OK
 		}
 		var product = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(0))
+				.param("product_id", List.of(0))
 				.one(Product.class);
 
 		assertEquals(0, product.getProductId());
@@ -852,7 +893,7 @@ public class SqlQueryTest extends AbstractDbTest {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 		var productId = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(0))
+				.param("product_id", List.of(0))
 				.one(Integer.class);
 
 		assertThat(productId, is(0));
@@ -868,14 +909,14 @@ public class SqlQueryTest extends AbstractDbTest {
 
 		try {
 			agent.query("example/select_product")
-					.param("product_id", Arrays.asList(0, 1, 2, 3))
+					.param("product_id", List.of(0, 1, 2, 3))
 					.findOne(Product.class);
 			assertTrue(false);
 		} catch (DataNonUniqueException e) {
 			// OK
 		}
 		Optional<Product> optional = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(0))
+				.param("product_id", List.of(0))
 				.findOne(Product.class);
 		assertTrue(optional.isPresent());
 
@@ -888,7 +929,7 @@ public class SqlQueryTest extends AbstractDbTest {
 		assertEquals("0番目の商品", product.getProductDescription());
 
 		optional = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(4))
+				.param("product_id", List.of(4))
 				.findOne(Product.class);
 
 		assertFalse(optional.isPresent());
@@ -902,7 +943,7 @@ public class SqlQueryTest extends AbstractDbTest {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 		Optional<Integer> productId = agent.query("example/select_product")
-				.param("product_id", Arrays.asList(0))
+				.param("product_id", List.of(0))
 				.findOne(Integer.class);
 
 		assertThat(productId.orElse(null), is(0));
@@ -916,8 +957,8 @@ public class SqlQueryTest extends AbstractDbTest {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
-		var ctx = agent.contextFrom("example/select_product");
-		ctx.param("product_id", Arrays.asList(0, 1));
+		var ctx = agent.context().setSqlName("example/select_product");
+		ctx.param("product_id", List.of(0, 1));
 
 		agent.query(ctx, rs -> {
 			var rsmd = rs.getMetaData();
@@ -950,7 +991,8 @@ public class SqlQueryTest extends AbstractDbTest {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
-		agent.query("example/select_product").param("product_id", Arrays.asList(0, 1))
+		agent.query("example/select_product")
+				.param("product_id", List.of(0, 1))
 				.stream().forEach(m -> {
 					assertTrue(m.containsKey("PRODUCT_ID"));
 					assertTrue(m.containsKey("PRODUCT_NAME"));
@@ -961,7 +1003,8 @@ public class SqlQueryTest extends AbstractDbTest {
 					assertTrue(m.containsKey("UPD_DATETIME"));
 					assertTrue(m.containsKey("VERSION_NO"));
 				});
-		assertThat(agent.query("example/select_product").param("product_id", Arrays.asList(0, 1)).stream().count(),
+		assertThat(agent.query("example/select_product")
+				.param("product_id", List.of(0, 1)).stream().count(),
 				is(2L));
 
 	}
@@ -974,7 +1017,8 @@ public class SqlQueryTest extends AbstractDbTest {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
-		agent.query("example/select_product").param("product_id", Arrays.asList(0, 1))
+		agent.query("example/select_product")
+				.param("product_id", List.of(0, 1))
 				.stream(CaseFormat.LOWER_SNAKE_CASE).forEach(m -> {
 					assertTrue(m.containsKey("product_id"));
 					assertTrue(m.containsKey("product_name"));
@@ -985,7 +1029,8 @@ public class SqlQueryTest extends AbstractDbTest {
 					assertTrue(m.containsKey("upd_datetime"));
 					assertTrue(m.containsKey("version_no"));
 				});
-		assertThat(agent.query("example/select_product").param("product_id", Arrays.asList(0, 1)).stream().count(),
+		assertThat(agent.query("example/select_product")
+				.param("product_id", List.of(0, 1)).stream().count(),
 				is(2L));
 	}
 
@@ -1004,7 +1049,8 @@ public class SqlQueryTest extends AbstractDbTest {
 		config.getSqlAgentProvider().setDefaultMapKeyCaseFormat(CaseFormat.LOWER_SNAKE_CASE);
 		agent = config.agent();
 
-		agent.query("example/select_product").param("product_id", Arrays.asList(0, 1))
+		agent.query("example/select_product")
+				.param("product_id", List.of(0, 1))
 				.stream().forEach(m -> {
 					assertTrue(m.containsKey("product_id"));
 					assertTrue(m.containsKey("product_name"));
@@ -1015,7 +1061,8 @@ public class SqlQueryTest extends AbstractDbTest {
 					assertTrue(m.containsKey("upd_datetime"));
 					assertTrue(m.containsKey("version_no"));
 				});
-		assertThat(agent.query("example/select_product").param("product_id", Arrays.asList(0, 1)).stream().count(),
+		assertThat(agent.query("example/select_product")
+				.param("product_id", List.of(0, 1)).stream().count(),
 				is(2L));
 	}
 
@@ -1028,7 +1075,7 @@ public class SqlQueryTest extends AbstractDbTest {
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
 		var bean = new ProductSearchBean();
-		bean.setProductIds(Arrays.asList(0, 1));
+		bean.setProductIds(List.of(0, 1));
 		bean.setProductName("商品");
 
 		agent.query("example/select_product_param_camel")
@@ -1057,7 +1104,7 @@ public class SqlQueryTest extends AbstractDbTest {
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
 		agent.query("example/select_product")
-				.param("product_id", Arrays.asList(0, 1))
+				.param("product_id", List.of(0, 1))
 				.stream(Product.class)
 				.forEach(p -> {
 					assertNotNull(p.getProductId());
@@ -1069,7 +1116,8 @@ public class SqlQueryTest extends AbstractDbTest {
 					assertNotNull(p.getUpdDatetime());
 					assertNotNull(p.getVersionNo());
 				});
-		assertThat(agent.query("example/select_product").param("product_id", Arrays.asList(0, 1)).stream().count(),
+		assertThat(agent.query("example/select_product")
+				.param("product_id", List.of(0, 1)).stream().count(),
 				is(2L));
 
 		try {
@@ -1273,8 +1321,8 @@ public class SqlQueryTest extends AbstractDbTest {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
-		var ctx = agent.contextFrom("example/select_product");
-		ctx.param("product_id", Arrays.asList(0, 1));
+		var ctx = agent.context().setSqlName("example/select_product");
+		ctx.param("product_id", List.of(0, 1));
 
 		var ans = agent.query(ctx, CaseFormat.CAMEL_CASE);
 		assertThat(ans.size(), is(2));
@@ -1290,8 +1338,8 @@ public class SqlQueryTest extends AbstractDbTest {
 			assertTrue(m.containsKey("versionNo"));
 		});
 
-		var ctx2 = agent.contextFrom("example/select_product");
-		ctx2.param("product_id", Arrays.asList(0, 1));
+		var ctx2 = agent.context().setSqlName("example/select_product");
+		ctx2.param("product_id", List.of(0, 1));
 
 		var ans2 = agent.query(ctx2, CaseFormat.UPPER_SNAKE_CASE);
 		assertThat(ans2.size(), is(2));
@@ -1316,7 +1364,8 @@ public class SqlQueryTest extends AbstractDbTest {
 		truncateTable("product_regist_work");
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
-		agent.query("example/select_product").param("product_id", Arrays.asList(0, 1))
+		agent.query("example/select_product")
+				.param("product_id", List.of(0, 1))
 				.stream(new MapResultSetConverter(agent.getSqlConfig(), CaseFormat.LOWER_SNAKE_CASE))
 				.forEach(m -> {
 					try {
@@ -1326,8 +1375,48 @@ public class SqlQueryTest extends AbstractDbTest {
 					}
 				});
 
-		var collect = agent.queryWith("select * from product_regist_work").collect();
+		var collect = agent.queryWith("select * from product_regist_work")
+				.collect();
 		assertThat(collect.size(), is(2));
+	}
+
+	/**
+	 * SqlAgentのsetter/getterのテスト.
+	 */
+	@Test
+	void testSetterGetter() throws Exception {
+		agent.setFetchSize(100);
+		assertThat(agent.getFetchSize(), is(100));
+		agent.setFetchSize(200);
+		assertThat(agent.getFetchSize(), is(200));
+
+		agent.setInsertsType(InsertsType.BULK);
+		assertThat(agent.getInsertsType(), is(InsertsType.BULK));
+		agent.setInsertsType(InsertsType.BATCH);
+		assertThat(agent.getInsertsType(), is(InsertsType.BATCH));
+
+		agent.setMapKeyCaseFormat(CaseFormat.PASCAL_CASE);
+		assertThat(agent.getMapKeyCaseFormat(), is(CaseFormat.PASCAL_CASE));
+		agent.setMapKeyCaseFormat(CaseFormat.CAMEL_CASE);
+		assertThat(agent.getMapKeyCaseFormat(), is(CaseFormat.CAMEL_CASE));
+
+		agent.setQueryTimeout(100);
+		assertThat(agent.getQueryTimeout(), is(100));
+		agent.setQueryTimeout(0);
+		assertThat(agent.getQueryTimeout(), is(0));
+
+		((SqlAgentImpl) agent).setMaxRetryCount(10);
+		assertThat(((SqlAgentImpl) agent).getMaxRetryCount(), is(10));
+		((SqlAgentImpl) agent).setMaxRetryCount(0);
+		assertThat(((SqlAgentImpl) agent).getMaxRetryCount(), is(0));
+
+		((SqlAgentImpl) agent).setRetryWaitTime(10);
+		assertThat(((SqlAgentImpl) agent).getRetryWaitTime(), is(10));
+		((SqlAgentImpl) agent).setRetryWaitTime(0);
+		assertThat(((SqlAgentImpl) agent).getRetryWaitTime(), is(0));
+
+		((SqlAgentImpl) agent).setSqlRetryCodes(List.of("60"));
+		assertThat(((SqlAgentImpl) agent).getSqlRetryCodes(), containsInAnyOrder("60"));
 	}
 
 	/**
@@ -1335,16 +1424,40 @@ public class SqlQueryTest extends AbstractDbTest {
 	 */
 	@Test
 	void testNotFoundFile() throws Exception {
-		try {
-			var ctx = agent.contextFrom("file");
+		Assertions.assertThrowsExactly(UroborosqlRuntimeException.class, () -> {
+			var ctx = agent.context().setSqlName("file");
 			agent.query(ctx);
-			// 例外が発生しなかった場合
-			fail();
-		} catch (UroborosqlRuntimeException ex) {
-			// OK
-		} catch (Exception e) {
-			fail(e.getMessage());
-		}
+		});
+	}
+
+	/**
+	 * SQLファイルが空文字の場合のテストケース。
+	 */
+	@Test
+	void testSqlNameEmpty() throws Exception {
+		Assertions.assertThrowsExactly(IllegalArgumentException.class, () -> {
+			agent.query("");
+		});
+	}
+
+	/**
+	 * クエリ実行処理のテストケース(SupplierによるSQLファイル決定)。
+	 */
+	@Test
+	void testQuerySupplier() throws Exception {
+		// 事前条件
+		truncateTable("product_regist_work");
+		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
+
+		var productId = List.of(0, 1);
+		var updDatetime = LocalDateTime.of(2005, 12, 12, 10, 10, 10);
+		var result = agent
+				.query(() -> updDatetime != null ? "example/select_product_where_upd_datetime"
+						: "example/select_product")
+				.param("product_id", productId)
+				.param("upd_datetime", updDatetime)
+				.collect();
+		assertThat(result.size(), is(2));
 	}
 
 	//Enumを定義
