@@ -1,6 +1,7 @@
 package jp.co.future.uroborosql;
 
 import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.CoreMatchers.not;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -16,7 +17,6 @@ import java.sql.DriverManager;
 import java.time.Clock;
 import java.time.ZoneId;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -26,6 +26,7 @@ import javax.naming.Context;
 import javax.naming.InitialContext;
 
 import org.h2.jdbcx.JdbcDataSource;
+import org.hamcrest.CoreMatchers;
 import org.junit.jupiter.api.Test;
 
 import jp.co.future.uroborosql.connection.ConnectionContextBuilder;
@@ -33,9 +34,12 @@ import jp.co.future.uroborosql.connection.DataSourceConnectionContext;
 import jp.co.future.uroborosql.connection.DataSourceConnectionSupplierImpl;
 import jp.co.future.uroborosql.connection.DefaultConnectionSupplierImpl;
 import jp.co.future.uroborosql.dialect.H2Dialect;
+import jp.co.future.uroborosql.enums.InsertsType;
+import jp.co.future.uroborosql.event.EventListenerHolder;
+import jp.co.future.uroborosql.mapping.DefaultEntityHandler;
 import jp.co.future.uroborosql.store.SqlResourceManagerImpl;
 import jp.co.future.uroborosql.utils.CaseFormat;
-import jp.co.future.uroborosql.utils.StringUtils;
+import jp.co.future.uroborosql.utils.ObjectUtils;
 
 public class UroboroSQLTest {
 	private List<Map<String, Object>> getDataFromFile(final Path path) {
@@ -46,7 +50,7 @@ public class UroboroSQLTest {
 				var parts = line.split("\t");
 				for (var part : parts) {
 					var keyValue = part.split(":", 2);
-					row.put(keyValue[0].toLowerCase(), StringUtils.isBlank(keyValue[1]) ? null : keyValue[1]);
+					row.put(keyValue[0].toLowerCase(), ObjectUtils.isBlank(keyValue[1]) ? null : keyValue[1]);
 				}
 				ans.add(row);
 			});
@@ -71,7 +75,7 @@ public class UroboroSQLTest {
 			var sqls = new String(Files.readAllBytes(Paths.get("src/test/resources/sql/ddl/create_tables.sql")),
 					StandardCharsets.UTF_8).split(";");
 			for (var sql : sqls) {
-				if (StringUtils.isNotBlank(sql)) {
+				if (ObjectUtils.isNotBlank(sql)) {
 					agent.updateWith(sql.trim()).count();
 				}
 			}
@@ -93,7 +97,7 @@ public class UroboroSQLTest {
 			var sqls = new String(Files.readAllBytes(Paths.get("src/test/resources/sql/ddl/create_tables.sql")),
 					StandardCharsets.UTF_8).split(";");
 			for (var sql : sqls) {
-				if (StringUtils.isNotBlank(sql)) {
+				if (ObjectUtils.isNotBlank(sql)) {
 					agent.updateWith(sql.trim()).count();
 				}
 			}
@@ -110,7 +114,7 @@ public class UroboroSQLTest {
 			var sqls = new String(Files.readAllBytes(Paths.get("src/test/resources/sql/ddl/create_tables.sql")),
 					StandardCharsets.UTF_8).split(";");
 			for (var sql : sqls) {
-				if (StringUtils.isNotBlank(sql)) {
+				if (ObjectUtils.isNotBlank(sql)) {
 					agent.updateWith(sql.trim()).count();
 				}
 			}
@@ -127,7 +131,7 @@ public class UroboroSQLTest {
 			var sqls = new String(Files.readAllBytes(Paths.get("src/test/resources/sql/ddl/create_tables.sql")),
 					StandardCharsets.UTF_8).split(";");
 			for (var sql : sqls) {
-				if (StringUtils.isNotBlank(sql)) {
+				if (ObjectUtils.isNotBlank(sql)) {
 					agent.updateWith(sql.trim()).count();
 				}
 			}
@@ -147,17 +151,19 @@ public class UroboroSQLTest {
 			var sqls = new String(Files.readAllBytes(Paths.get("src/test/resources/sql/ddl/create_tables.sql")),
 					StandardCharsets.UTF_8).split(";");
 			for (var sql : sqls) {
-				if (StringUtils.isNotBlank(sql)) {
+				if (ObjectUtils.isNotBlank(sql)) {
 					agent.updateWith(sql.trim()).count();
 				}
 			}
 
 			insert(agent, Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
-			assertThat(agent.queryWith(checkSql).collect().size(), is(1));
+			assertThat(agent.queryWith(checkSql)
+					.collect().size(), is(1));
 		}
 
 		try (var agent = config.agent()) {
-			assertThat(agent.queryWith(checkSql).collect().size(), is(0));
+			assertThat(agent.queryWith(checkSql)
+					.collect().size(), is(0));
 		}
 	}
 
@@ -169,7 +175,49 @@ public class UroboroSQLTest {
 			var sqls = new String(Files.readAllBytes(Paths.get("src/test/resources/sql/ddl/create_tables.sql")),
 					StandardCharsets.UTF_8).split(";");
 			for (var sql : sqls) {
-				if (StringUtils.isNotBlank(sql)) {
+				if (ObjectUtils.isNotBlank(sql)) {
+					agent.updateWith(sql.trim()).count();
+				}
+			}
+
+			insert(agent, Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
+			agent.rollback();
+		}
+
+		assertEquals(true, config.getSqlResourceManager().existSql("ddl/create_tables"));
+	}
+
+	@Test
+	void builderSetEntityHandler() throws Exception {
+		var config = UroboroSQL.builder("jdbc:h2:mem:" + this.getClass().getSimpleName(), "", "", null)
+				.setEntityHandler(new DefaultEntityHandler()).build();
+		try (var agent = config.agent()) {
+			var sqls = new String(Files.readAllBytes(Paths.get("src/test/resources/sql/ddl/create_tables.sql")),
+					StandardCharsets.UTF_8).split(";");
+			for (var sql : sqls) {
+				if (ObjectUtils.isNotBlank(sql)) {
+					agent.updateWith(sql.trim()).count();
+				}
+			}
+
+			insert(agent, Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
+			agent.rollback();
+		}
+
+		assertEquals(true, config.getSqlResourceManager().existSql("ddl/create_tables"));
+	}
+
+	@Test
+	void builderSetEventListenerHolder() throws Exception {
+		var config = UroboroSQL.builder("jdbc:h2:mem:" + this.getClass().getSimpleName(), "", "", null)
+				.setEventListenerHolder(new EventListenerHolder().addBeforeCommitListener(evt -> {
+					assertThat(evt.getConnection(), not(CoreMatchers.nullValue()));
+				})).build();
+		try (var agent = config.agent()) {
+			var sqls = new String(Files.readAllBytes(Paths.get("src/test/resources/sql/ddl/create_tables.sql")),
+					StandardCharsets.UTF_8).split(";");
+			for (var sql : sqls) {
+				if (ObjectUtils.isNotBlank(sql)) {
 					agent.updateWith(sql.trim()).count();
 				}
 			}
@@ -191,7 +239,7 @@ public class UroboroSQLTest {
 			var sqls = new String(Files.readAllBytes(Paths.get("src/test/resources/sql/ddl/create_tables.sql")),
 					StandardCharsets.UTF_8).split(";");
 			for (var sql : sqls) {
-				if (StringUtils.isNotBlank(sql)) {
+				if (ObjectUtils.isNotBlank(sql)) {
 					agent.updateWith(sql.trim()).count();
 				}
 			}
@@ -229,13 +277,14 @@ public class UroboroSQLTest {
 		var checkSql = "select table_name from information_schema.tables where table_name = 'PRODUCT'";
 		try (var agent = config.agent()) {
 			agent.required(() -> {
-				assertThat(agent.queryWith(checkSql).collect().size(), is(0));
+				assertThat(agent.queryWith(checkSql)
+						.collect().size(), is(0));
 				try {
 					var sqls = new String(
 							Files.readAllBytes(Paths.get("src/test/resources/sql/ddl/create_tables.sql")),
 							StandardCharsets.UTF_8).split(";");
 					for (var sql : sqls) {
-						if (StringUtils.isNotBlank(sql)) {
+						if (ObjectUtils.isNotBlank(sql)) {
 							agent.updateWith(sql.trim()).count();
 						}
 					}
@@ -243,8 +292,10 @@ public class UroboroSQLTest {
 					fail(e.getMessage());
 				}
 				insert(agent, Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
-				assertThat(agent.query("example/select_product").collect().size(), is(2));
-				assertThat(agent.queryWith(checkSql).collect().size(), is(1));
+				assertThat(agent.query("example/select_product")
+						.collect().size(), is(2));
+				assertThat(agent.queryWith(checkSql)
+						.collect().size(), is(1));
 			});
 		}
 
@@ -253,13 +304,14 @@ public class UroboroSQLTest {
 				.autoCommit(true)
 				.readOnly(true)
 				.transactionIsolation(Connection.TRANSACTION_READ_UNCOMMITTED))) {
-			assertThat(agent.queryWith(checkSql).collect().size(), is(0));
+			assertThat(agent.queryWith(checkSql)
+					.collect().size(), is(0));
 			try {
 				var sqls = new String(
 						Files.readAllBytes(Paths.get("src/test/resources/sql/ddl/create_tables.sql")),
 						StandardCharsets.UTF_8).split(";");
 				for (var sql : sqls) {
-					if (StringUtils.isNotBlank(sql)) {
+					if (ObjectUtils.isNotBlank(sql)) {
 						agent.updateWith(sql.trim()).count();
 					}
 				}
@@ -267,8 +319,10 @@ public class UroboroSQLTest {
 				fail(e.getMessage());
 			}
 			insert(agent, Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
-			assertThat(agent.query("example/select_product").collect().size(), is(2));
-			assertThat(agent.queryWith(checkSql).collect().size(), is(1));
+			assertThat(agent.query("example/select_product")
+					.collect().size(), is(2));
+			assertThat(agent.queryWith(checkSql)
+					.collect().size(), is(1));
 		}
 	}
 
@@ -281,14 +335,15 @@ public class UroboroSQLTest {
 			var sqls = new String(Files.readAllBytes(Paths.get("src/test/resources/sql/ddl/create_tables.sql")),
 					StandardCharsets.UTF_8).split(";");
 			for (var sql : sqls) {
-				if (StringUtils.isNotBlank(sql)) {
+				if (ObjectUtils.isNotBlank(sql)) {
 					agent.updateWith(sql.trim()).count();
 				}
 			}
 
 			insert(agent, Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
-			agent.query("example/select_product").param("product_id", Arrays.asList(0, 1))
+			agent.query("example/select_product")
+					.param("product_id", List.of(0, 1))
 					.stream().forEach(m -> {
 						assertTrue(m.containsKey("productId"));
 						assertTrue(m.containsKey("productName"));
@@ -300,6 +355,19 @@ public class UroboroSQLTest {
 						assertTrue(m.containsKey("versionNo"));
 					});
 
+			agent.rollback();
+		}
+
+		assertEquals(new H2Dialect().getDatabaseName(), config.getDialect().getDatabaseName());
+	}
+
+	@Test
+	void builderWithInsertsType() throws Exception {
+		var config = UroboroSQL.builder("jdbc:h2:mem:" + this.getClass().getSimpleName(), "", "")
+				.setSqlAgentProvider(new SqlAgentProviderImpl().setDefaultInsertsType(InsertsType.BULK))
+				.build();
+		try (var agent = config.agent()) {
+			assertThat(agent.getInsertsType(), is(InsertsType.BULK));
 			agent.rollback();
 		}
 
