@@ -8,17 +8,18 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.fail;
 
+import java.math.BigDecimal;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.time.LocalDate;
 import java.time.Month;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.api.BeforeAll;
@@ -28,10 +29,10 @@ import org.junit.jupiter.api.Test;
 import jp.co.future.uroborosql.UroboroSQL;
 import jp.co.future.uroborosql.config.SqlConfig;
 import jp.co.future.uroborosql.enums.InsertsType;
+import jp.co.future.uroborosql.event.subscriber.AuditLogEventSubscriber;
 import jp.co.future.uroborosql.exception.OptimisticLockException;
+import jp.co.future.uroborosql.exception.ParameterNotFoundRuntimeException;
 import jp.co.future.uroborosql.exception.UroborosqlRuntimeException;
-import jp.co.future.uroborosql.filter.AuditLogSqlFilter;
-import jp.co.future.uroborosql.filter.SqlFilterManagerImpl;
 import jp.co.future.uroborosql.fluent.SqlEntityQuery.Nulls;
 import jp.co.future.uroborosql.mapping.mapper.PropertyMapper;
 import jp.co.future.uroborosql.mapping.mapper.PropertyMapperManager;
@@ -92,8 +93,9 @@ public class DefaultEntityHandlerTest {
 		}
 
 		config = UroboroSQL.builder(url, user, password)
-				.setSqlFilterManager(new SqlFilterManagerImpl().addSqlFilter(new AuditLogSqlFilter()))
 				.build();
+		config.getEventListenerHolder().addEventSubscriber(new AuditLogEventSubscriber());
+
 		DefaultEntityHandler.clearCache();
 		MappingUtils.clearCache();
 	}
@@ -192,7 +194,8 @@ public class DefaultEntityHandlerTest {
 				var test3 = new TestEntity(3L, "name3", 22, LocalDate.of(1990, Month.MAY, 1), Optional.empty());
 				agent.insert(test3);
 
-				var list = agent.query(TestEntity.class).collect();
+				var list = agent.query(TestEntity.class)
+						.collect();
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 				assertThat(list.get(2), is(test3));
@@ -218,7 +221,8 @@ public class DefaultEntityHandlerTest {
 				var test3 = new TestEntity2(3L, "name3", 22, LocalDate.of(1990, Month.MAY, 1));
 				agent.insert(test3);
 
-				var list = agent.query(TestEntity2.class).collect();
+				var list = agent.query(TestEntity2.class)
+						.collect();
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 				assertThat(list.get(2), is(test3));
@@ -244,7 +248,8 @@ public class DefaultEntityHandlerTest {
 				var test3 = new TestEntity3(3L, "name3", 22, LocalDate.of(1990, Month.MAY, 1));
 				agent.insert(test3);
 
-				var list = agent.query(TestEntity3.class).collect();
+				var list = agent.query(TestEntity3.class)
+						.collect();
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 				assertThat(list.get(2), is(test3));
@@ -330,6 +335,112 @@ public class DefaultEntityHandlerTest {
 	}
 
 	@Test
+	void testQuery5() throws Exception {
+
+		try (var agent = config.agent()) {
+			agent.required(() -> {
+				var test1 = new TestEntity4(1L, "name1", new BigDecimal("20"),
+						LocalDate.of(1990, Month.APRIL, 1));
+				agent.insert(test1);
+				var test2 = new TestEntity4(2L, "name2", new BigDecimal("21"),
+						LocalDate.of(1990, Month.MAY, 1));
+				agent.insert(test2);
+				var test3 = new TestEntity4(3L, "name3", new BigDecimal("22"),
+						LocalDate.of(1990, Month.MAY, 1));
+				agent.insert(test3);
+				var test4 = new TestEntity4(4L, "name4", new BigDecimal("23"), null);
+				agent.insert(test4);
+
+				var count1 = agent.query(TestEntity4.class).count();
+				assertThat(count1, is(4L));
+				var count2 = agent.query(TestEntity4.class).count(TestEntity4.Names.Birthday);
+				assertThat(count2, is(3L));
+
+				var sum = agent.query(TestEntity4.class).sum(TestEntity4.Names.Age);
+				assertThat(sum, is(new BigDecimal("86")));
+
+				var min = agent.query(TestEntity4.class).min(TestEntity4.Names.Age);
+				assertThat(min, is(new BigDecimal("20")));
+
+				var minName = agent.query(TestEntity4.class).min(TestEntity4.Names.Name);
+				assertThat(minName, is("name1"));
+
+				long max = agent.query(TestEntity4.class).max(TestEntity4.Names.Id);
+				assertThat(max, is(4L));
+
+				var maxDate = agent.query(TestEntity4.class).max(TestEntity4.Names.Birthday);
+				assertThat(maxDate, is(LocalDate.of(1990, Month.MAY, 1)));
+			});
+		}
+	}
+
+	@Test
+	void testQuery6() throws Exception {
+
+		try (var agent = config.agent()) {
+			agent.required(() -> {
+				var test1 = new TestEntity5(1L, "name1", Optional.ofNullable(new BigDecimal("20")),
+						LocalDate.of(1990, Month.APRIL, 1));
+				agent.insert(test1);
+				var test2 = new TestEntity5(2L, "name2", Optional.ofNullable(new BigDecimal("21")),
+						LocalDate.of(1990, Month.MAY, 1));
+				agent.insert(test2);
+				var test3 = new TestEntity5(3L, "name3", Optional.ofNullable(new BigDecimal("22")),
+						LocalDate.of(1990, Month.MAY, 1));
+				agent.insert(test3);
+				var test4 = new TestEntity5(4L, "name4", Optional.empty(), null);
+				agent.insert(test4);
+
+				var count1 = agent.query(TestEntity5.class).count();
+				assertThat(count1, is(4L));
+				var count2 = agent.query(TestEntity5.class).count(TestEntity5.Names.Birthday);
+				assertThat(count2, is(3L));
+
+				Optional<BigDecimal> sum = agent.query(TestEntity5.class).sum(TestEntity5.Names.Age);
+				assertThat(sum.orElseThrow(IllegalStateException::new), is(new BigDecimal("63")));
+
+				Optional<BigDecimal> min = agent.query(TestEntity5.class).min(TestEntity5.Names.Age);
+				assertThat(min.orElseThrow(IllegalStateException::new), is(new BigDecimal("20")));
+
+				var minName = agent.query(TestEntity5.class).min(TestEntity5.Names.Name);
+				assertThat(minName, is("name1"));
+
+				long max = agent.query(TestEntity5.class).max(TestEntity5.Names.Id);
+				assertThat(max, is(4L));
+
+				var maxDate = agent.query(TestEntity5.class).max(TestEntity5.Names.Birthday);
+				assertThat(maxDate, is(LocalDate.of(1990, Month.MAY, 1)));
+
+			});
+		}
+	}
+
+	@Test
+	void testQuery7() throws Exception {
+
+		try (var agent = config.agent()) {
+			agent.required(() -> {
+				var test1 = new TestEntity5(1L, "name1", Optional.empty(),
+						LocalDate.of(1990, Month.APRIL, 1));
+				agent.insert(test1);
+				var test2 = new TestEntity5(2L, "name2", Optional.empty(),
+						LocalDate.of(1990, Month.MAY, 1));
+				agent.insert(test2);
+
+				Optional<BigDecimal> sum = agent.query(TestEntity5.class).sum(TestEntity5.Names.Age);
+				assertThat(sum.isPresent(), is(false));
+
+				Optional<BigDecimal> min = agent.query(TestEntity5.class).min(TestEntity5.Names.Age);
+				assertThat(min.isPresent(), is(false));
+
+				Optional<BigDecimal> max = agent.query(TestEntity5.class).max(TestEntity5.Names.Age);
+				assertThat(max.isPresent(), is(false));
+
+			});
+		}
+	}
+
+	@Test
 	void testQueryCountUnmatchColumn() throws Exception {
 		assertThrows(UroborosqlRuntimeException.class, () -> {
 			try (var agent = config.agent()) {
@@ -403,155 +514,293 @@ public class DefaultEntityHandlerTest {
 				var test3 = new TestEntity(3L, "name3", 20, LocalDate.of(1990, Month.JUNE, 1), Optional.empty());
 				agent.insert(test3);
 
-				var list = agent.query(TestEntity.class).equal("id", 2).collect();
+				// Equal
+				var list = agent.query(TestEntity.class)
+						.equal("id", 2)
+						.collect();
 				assertThat(list.size(), is(1));
 				assertThat(list.get(0), is(test2));
 
+				list = agent.query(TestEntity.class)
+						.equal("id", null)
+						.collect();
+				assertThat(list.size(), is(0));
+
+				// EqualIfNotEmpty
+				list = agent.query(TestEntity.class)
+						.equalIfNotEmpty("id", 2)
+						.collect();
+				assertThat(list.size(), is(1));
+				assertThat(list.get(0), is(test2));
+
+				list = agent.query(TestEntity.class)
+						.equalIfNotEmpty("id", null)
+						.collect();
+				assertThat(list.size(), is(3));
+
 				// Not Equal
-				list = agent.query(TestEntity.class).notEqual("id", 2).collect();
+				list = agent.query(TestEntity.class)
+						.notEqual("id", 2)
+						.collect();
 				assertThat(list.size(), is(2));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test3));
 
+				list = agent.query(TestEntity.class)
+						.notEqual("id", null)
+						.collect();
+				assertThat(list.size(), is(0));
+
+				// Not Equal IfNotEmpty
+				list = agent.query(TestEntity.class)
+						.notEqualIfNotEmpty("id", 2)
+						.collect();
+				assertThat(list.size(), is(2));
+				assertThat(list.get(0), is(test1));
+				assertThat(list.get(1), is(test3));
+
+				list = agent.query(TestEntity.class)
+						.notEqualIfNotEmpty("id", null)
+						.collect();
+				assertThat(list.size(), is(3));
+
 				// Greater Than
-				list = agent.query(TestEntity.class).greaterThan("age", 21).collect();
+				list = agent.query(TestEntity.class)
+						.greaterThan("age", 21)
+						.collect();
 				assertThat(list.size(), is(1));
 				assertThat(list.get(0), is(test1));
 
+				list = agent.query(TestEntity.class)
+						.greaterThan("age", null)
+						.collect();
+				assertThat(list.size(), is(0));
+
 				// Greater Equal
-				list = agent.query(TestEntity.class).greaterEqual("age", 21).collect();
+				list = agent.query(TestEntity.class)
+						.greaterEqual("age", 21)
+						.collect();
 				assertThat(list.size(), is(2));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 
+				list = agent.query(TestEntity.class)
+						.greaterEqual("age", null)
+						.collect();
+				assertThat(list.size(), is(0));
+
 				// Less Than
-				list = agent.query(TestEntity.class).lessThan("age", 21).collect();
+				list = agent.query(TestEntity.class)
+						.lessThan("age", 21)
+						.collect();
 				assertThat(list.size(), is(1));
 				assertThat(list.get(0), is(test3));
 
+				list = agent.query(TestEntity.class)
+						.lessThan("age", null)
+						.collect();
+				assertThat(list.size(), is(0));
+
 				// Greater Equal
-				list = agent.query(TestEntity.class).lessEqual("age", 21).collect();
+				list = agent.query(TestEntity.class)
+						.lessEqual("age", 21)
+						.collect();
 				assertThat(list.size(), is(2));
 				assertThat(list.get(0), is(test2));
 				assertThat(list.get(1), is(test3));
 
+				list = agent.query(TestEntity.class)
+						.lessEqual("age", null)
+						.collect();
+				assertThat(list.size(), is(0));
+
 				// In (array)
-				list = agent.query(TestEntity.class).in("id", 1, 2).collect();
+				list = agent.query(TestEntity.class)
+						.in("id", 1, 2)
+						.collect();
 				assertThat(list.size(), is(2));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 
 				// In (list)
-				list = agent.query(TestEntity.class).in("id", Arrays.asList(2, 3)).collect();
+				list = agent.query(TestEntity.class)
+						.in("id", List.of(2, 3))
+						.collect();
 				assertThat(list.size(), is(2));
 				assertThat(list.get(0), is(test2));
 				assertThat(list.get(1), is(test3));
 
+				assertThrows(ParameterNotFoundRuntimeException.class, () -> {
+					agent.query(TestEntity.class)
+							.in("id")
+							.collect();
+				});
+
 				// Not In (array)
-				list = agent.query(TestEntity.class).notIn("id", 1, 2).collect();
+				list = agent.query(TestEntity.class)
+						.notIn("id", 1, 2)
+						.collect();
 				assertThat(list.size(), is(1));
 				assertThat(list.get(0), is(test3));
 
 				// Not In (list)
-				list = agent.query(TestEntity.class).notIn("id", Arrays.asList(2, 3)).collect();
+				list = agent.query(TestEntity.class)
+						.notIn("id", List.of(2, 3))
+						.collect();
 				assertThat(list.size(), is(1));
 				assertThat(list.get(0), is(test1));
 
+				assertThrows(ParameterNotFoundRuntimeException.class, () -> {
+					agent.query(TestEntity.class)
+							.notIn("id")
+							.collect();
+				});
+
 				// Like
-				list = agent.query(TestEntity.class).like("name", "name3").collect();
+				list = agent.query(TestEntity.class).like("name", "name3")
+						.collect();
 				assertThat(list.size(), is(1));
 				assertThat(list.get(0), is(test3));
 
+				list = agent.query(TestEntity.class).like("name", null)
+						.collect();
+				assertThat(list.size(), is(3));
+
 				// Like with wildcards (_)
-				list = agent.query(TestEntity.class).like("name", "n_me_").collect();
+				list = agent.query(TestEntity.class).like("name", "n_me_")
+						.collect();
 				assertThat(list.size(), is(3));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 				assertThat(list.get(2), is(test3));
 
 				// Like with wildcards (%)
-				list = agent.query(TestEntity.class).like("name", "name%").collect();
+				list = agent.query(TestEntity.class).like("name", "name%")
+						.collect();
 				assertThat(list.size(), is(3));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 				assertThat(list.get(2), is(test3));
 
 				// startsWith
-				list = agent.query(TestEntity.class).startsWith("name", "name").collect();
+				list = agent.query(TestEntity.class).startsWith("name", "name")
+						.collect();
 				assertThat(list.size(), is(3));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 				assertThat(list.get(2), is(test3));
 
+				list = agent.query(TestEntity.class).startsWith("name", null)
+						.collect();
+				assertThat(list.size(), is(3));
+
 				// startsWith wildcards
-				list = agent.query(TestEntity.class).startsWith("name", "%ame").collect();
+				list = agent.query(TestEntity.class).startsWith("name", "%ame")
+						.collect();
 				assertThat(list.size(), is(0));
 
 				// endsWith
-				list = agent.query(TestEntity.class).endsWith("name", "3").collect();
+				list = agent.query(TestEntity.class).endsWith("name", "3")
+						.collect();
 				assertThat(list.size(), is(1));
 				assertThat(list.get(0), is(test3));
 
+				list = agent.query(TestEntity.class).endsWith("name", null)
+						.collect();
+				assertThat(list.size(), is(3));
+
 				// endsWith wildcards
-				list = agent.query(TestEntity.class).endsWith("name", "%3").collect();
+				list = agent.query(TestEntity.class).endsWith("name", "%3")
+						.collect();
 				assertThat(list.size(), is(0));
 
 				// contains
-				list = agent.query(TestEntity.class).contains("name", "me").collect();
+				list = agent.query(TestEntity.class).contains("name", "me")
+						.collect();
 				assertThat(list.size(), is(3));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 				assertThat(list.get(2), is(test3));
 
-				list = agent.query(TestEntity.class).contains("name", "%me_").collect();
+				list = agent.query(TestEntity.class).contains("name", null)
+						.collect();
+				assertThat(list.size(), is(3));
+
+				list = agent.query(TestEntity.class).contains("name", "%me_")
+						.collect();
 				assertThat(list.size(), is(0));
 
 				// Not Like
-				list = agent.query(TestEntity.class).notLike("name", "name3").collect();
+				list = agent.query(TestEntity.class).notLike("name", "name3")
+						.collect();
 				assertThat(list.size(), is(2));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 
+				list = agent.query(TestEntity.class).notLike("name", null)
+						.collect();
+				assertThat(list.size(), is(0));
+
 				// Not Like with wildcards (_)
-				list = agent.query(TestEntity.class).notLike("name", "name_").collect();
+				list = agent.query(TestEntity.class).notLike("name", "name_")
+						.collect();
 				assertThat(list.size(), is(0));
 
 				// Not Like with wildcards (%)
-				list = agent.query(TestEntity.class).notLike("name", "name%").collect();
+				list = agent.query(TestEntity.class).notLike("name", "name%")
+						.collect();
 				assertThat(list.size(), is(0));
 
 				// notStartsWith
-				list = agent.query(TestEntity.class).notStartsWith("name", "name").collect();
+				list = agent.query(TestEntity.class).notStartsWith("name", "name")
+						.collect();
+				assertThat(list.size(), is(0));
+
+				list = agent.query(TestEntity.class).notStartsWith("name", null)
+						.collect();
 				assertThat(list.size(), is(0));
 
 				// notStartsWith wildcards
-				list = agent.query(TestEntity.class).notStartsWith("name", "%name").collect();
+				list = agent.query(TestEntity.class).notStartsWith("name", "%name")
+						.collect();
 				assertThat(list.size(), is(3));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 				assertThat(list.get(2), is(test3));
 
 				// notEndsWith
-				list = agent.query(TestEntity.class).notEndsWith("name", "3").collect();
+				list = agent.query(TestEntity.class).notEndsWith("name", "3")
+						.collect();
 				assertThat(list.size(), is(2));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 
+				list = agent.query(TestEntity.class).notEndsWith("name", null)
+						.collect();
+				assertThat(list.size(), is(0));
+
 				// notEndsWith wildcards
-				list = agent.query(TestEntity.class).notEndsWith("name", "%3").collect();
+				list = agent.query(TestEntity.class).notEndsWith("name", "%3")
+						.collect();
 				assertThat(list.size(), is(3));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 				assertThat(list.get(2), is(test3));
 
 				// notContains
-				list = agent.query(TestEntity.class).notContains("name", "2").collect();
+				list = agent.query(TestEntity.class).notContains("name", "2")
+						.collect();
 				assertThat(list.size(), is(2));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test3));
 
+				list = agent.query(TestEntity.class).notContains("name", null)
+						.collect();
+				assertThat(list.size(), is(0));
+
 				// notContains wildcards
-				list = agent.query(TestEntity.class).notContains("name", "_2").collect();
+				list = agent.query(TestEntity.class).notContains("name", "_2")
+						.collect();
 				assertThat(list.size(), is(3));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
@@ -570,6 +819,21 @@ public class DefaultEntityHandlerTest {
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 
+				list = agent.query(TestEntity.class)
+						.between("birthday", null, LocalDate.of(1990, Month.MAY, 1))
+						.collect();
+				assertThat(list.size(), is(0));
+
+				list = agent.query(TestEntity.class)
+						.between("birthday", LocalDate.of(1990, Month.APRIL, 1), null)
+						.collect();
+				assertThat(list.size(), is(0));
+
+				list = agent.query(TestEntity.class)
+						.between("birthday", null, null)
+						.collect();
+				assertThat(list.size(), is(0));
+
 				// not between
 				list = agent.query(TestEntity.class)
 						.notBetween("birthday", LocalDate.of(1990, Month.APRIL, 15), LocalDate.of(1990, Month.MAY, 15))
@@ -585,18 +849,51 @@ public class DefaultEntityHandlerTest {
 				assertThat(list.size(), is(1));
 				assertThat(list.get(0), is(test3));
 
+				list = agent.query(TestEntity.class)
+						.notBetween("birthday", null, LocalDate.of(1990, Month.MAY, 1))
+						.asc("id")
+						.collect(); // birthday < null or birthday > 5/1
+				assertThat(list.size(), is(1));
+				assertThat(list.get(0), is(test3));
+
+				list = agent.query(TestEntity.class)
+						.notBetween("birthday", LocalDate.of(1990, Month.APRIL, 1), null)
+						.asc("id")
+						.collect(); // birthday < 4/1 or birthday > null
+				assertThat(list.size(), is(0));
+
+				list = agent.query(TestEntity.class)
+						.notBetween("birthday", null, null)
+						.asc("id")
+						.collect(); // birthday < 4/1 or birthday > 5/1
+				assertThat(list.size(), is(0));
+
 				// is null
-				list = agent.query(TestEntity.class).isNull("memo").collect();
+				list = agent.query(TestEntity.class).isNull("memo")
+						.collect();
 				assertThat(list.size(), is(1));
 				assertThat(list.get(0), is(test3));
 
 				// is not null
-				list = agent.query(TestEntity.class).isNotNull("memo").collect();
+				list = agent.query(TestEntity.class).isNotNull("memo")
+						.collect();
 				assertThat(list.size(), is(2));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 
-				// where with param(s)
+				// where with param
+				list = agent.query(TestEntity.class)
+						.where("birthday < /*birthday1*/", "birthday1", LocalDate.of(1990, Month.APRIL, 15))
+						.where("\"Age\" < /*age*/", "age", 21)
+						.collect();
+				assertThat(list.size(), is(0));
+
+				list = agent.query(TestEntity.class)
+						.where(null, "birthday1", LocalDate.of(1990, Month.APRIL, 15))
+						.collect();
+				assertThat(list.size(), is(3));
+
+				// where with params
 				Map<String, Object> paramMap = new HashMap<>();
 				paramMap.put("birthday1", LocalDate.of(1990, Month.APRIL, 15));
 				paramMap.put("birthday2", LocalDate.of(1990, Month.MAY, 15));
@@ -614,6 +911,35 @@ public class DefaultEntityHandlerTest {
 						.collect();
 				assertThat(list.size(), is(1));
 				assertThat(list.get(0), is(test3));
+
+				// where
+				list = agent.query(TestEntity.class)
+						.where(null)
+						.collect();
+				assertThat(list.size(), is(3));
+
+				// where
+				list = agent.query(TestEntity.class)
+						.where(null, paramMap)
+						.collect();
+				assertThat(list.size(), is(3));
+
+				// where if not empty
+				list = agent.query(TestEntity.class)
+						.whereIfNotEmpty("birthday < /*birthday1*/", "birthday1", LocalDate.of(1990, Month.APRIL, 15))
+						.collect();
+				assertThat(list.size(), is(1));
+
+				list = agent.query(TestEntity.class)
+						.whereIfNotEmpty("birthday < /*birthday1*/", "birthday1", null)
+						.collect();
+				assertThat(list.size(), is(3));
+
+				// where if not empty
+				list = agent.query(TestEntity.class)
+						.whereIfNotEmpty(null, "birthday", 1)
+						.collect();
+				assertThat(list.size(), is(3));
 
 				// order by asc
 				list = agent.query(TestEntity.class)
@@ -777,13 +1103,15 @@ public class DefaultEntityHandlerTest {
 				assertThat(config.getSqlAgentProvider().isStrictForUpdateType(), is(true));
 
 				agent.required(() -> {
-					var list = agent.query(TestEntity3.class).forUpdate().collect();
+					var list = agent.query(TestEntity3.class).forUpdate()
+							.collect();
 					assertThat(list.size(), is(4));
 				});
 
 				try {
 					agent.required(() -> {
-						agent.query(TestEntity3.class).forUpdateNoWait().first();
+						agent.query(TestEntity3.class).forUpdateNoWait()
+								.first();
 					});
 					fail();
 				} catch (UroborosqlRuntimeException ex) {
@@ -816,19 +1144,22 @@ public class DefaultEntityHandlerTest {
 
 				config.getSqlAgentProvider().setStrictForUpdateType(false);
 				try {
-					assertThat(agent.query(TestEntity3.class).forUpdateNoWait().first().isPresent(), is(true));
+					assertThat(agent.query(TestEntity3.class).forUpdateNoWait()
+							.first().isPresent(), is(true));
 				} catch (Throwable th) {
 					fail();
 				}
 
 				try {
-					assertThat(agent.query(TestEntity3.class).forUpdateWait().first().isPresent(), is(true));
+					assertThat(agent.query(TestEntity3.class).forUpdateWait()
+							.first().isPresent(), is(true));
 				} catch (Throwable th) {
 					fail();
 				}
 
 				try {
-					assertThat(agent.query(TestEntity3.class).forUpdateWait(10).first().isPresent(), is(true));
+					assertThat(agent.query(TestEntity3.class).forUpdateWait(10)
+							.first().isPresent(), is(true));
 				} catch (Throwable th) {
 					fail();
 				}
@@ -1207,9 +1538,12 @@ public class DefaultEntityHandlerTest {
 
 				assertThat(agent.delete(TestDataNoKeyEntity.class, 1, 3), is(2));
 
-				assertThat(agent.query(TestDataNoKeyEntity.class).equal("id", 1).first().orElse(null), is(nullValue()));
-				assertThat(agent.query(TestDataNoKeyEntity.class).equal("id", 2).first().orElse(null), is(test2));
-				assertThat(agent.query(TestDataNoKeyEntity.class).equal("id", 3).first().orElse(null), is(nullValue()));
+				assertThat(agent.query(TestDataNoKeyEntity.class).equal("id", 1)
+						.first().orElse(null), is(nullValue()));
+				assertThat(agent.query(TestDataNoKeyEntity.class).equal("id", 2)
+						.first().orElse(null), is(test2));
+				assertThat(agent.query(TestDataNoKeyEntity.class).equal("id", 3)
+						.first().orElse(null), is(nullValue()));
 			});
 		}
 	}
@@ -1303,7 +1637,7 @@ public class DefaultEntityHandlerTest {
 				agent.rollback("sp-in-array");
 
 				agent.setSavepoint("sp-in-list");
-				assertThat(agent.delete(TestEntity.class).in("id", Arrays.asList(1, 3)).count(), is(2));
+				assertThat(agent.delete(TestEntity.class).in("id", List.of(1, 3)).count(), is(2));
 				assertThat(agent.find(TestEntity.class, 1).orElse(null), is(nullValue()));
 				assertThat(agent.find(TestEntity.class, 2).orElse(null), is(test2));
 				assertThat(agent.find(TestEntity.class, 3).orElse(null), is(nullValue()));
@@ -1317,7 +1651,7 @@ public class DefaultEntityHandlerTest {
 				agent.rollback("sp-notIn-array");
 
 				agent.setSavepoint("sp-notIn-list");
-				assertThat(agent.delete(TestEntity.class).notIn("id", Arrays.asList(1, 3)).count(), is(1));
+				assertThat(agent.delete(TestEntity.class).notIn("id", List.of(1, 3)).count(), is(1));
 				assertThat(agent.find(TestEntity.class, 1).orElse(null), is(test1));
 				assertThat(agent.find(TestEntity.class, 2).orElse(null), is(nullValue()));
 				assertThat(agent.find(TestEntity.class, 3).orElse(null), is(test3));
@@ -1580,7 +1914,8 @@ public class DefaultEntityHandlerTest {
 				var count = agent.inserts(Stream.empty(), InsertsType.BATCH);
 				assertThat(count, is(0));
 
-				assertThat(agent.query(TestEntityForInserts.class).collect().size(), is(0));
+				assertThat(agent.query(TestEntityForInserts.class)
+						.collect().size(), is(0));
 			});
 		}
 	}
@@ -1632,7 +1967,7 @@ public class DefaultEntityHandlerTest {
 						LocalDate.of(1990, Month.APRIL, 3),
 						"memo3");
 
-				var count = agent.inserts(Stream.of(test1, test2, test3));
+				var count = agent.inserts(Stream.of(test1, test2, test3), InsertsType.BULK);
 				assertThat(count, is(3));
 
 				var data = agent.find(TestEntityForInserts.class, 1).orElse(null);
@@ -1661,7 +1996,7 @@ public class DefaultEntityHandlerTest {
 						LocalDate.of(1990, Month.APRIL, 3),
 						"memo3");
 
-				var count = agent.inserts(TestEntityForInserts.class, Stream.of(test1, test2, test3));
+				var count = agent.inserts(TestEntityForInserts.class, Stream.of(test1, test2, test3), InsertsType.BULK);
 				assertThat(count, is(3));
 
 				var data = agent.find(TestEntityForInserts.class, 1).orElse(null);
@@ -1690,7 +2025,7 @@ public class DefaultEntityHandlerTest {
 						LocalDate.of(1990, Month.APRIL, 3),
 						"memo3");
 
-				var count = agent.inserts(Stream.of(test1, test2, test3), (ctx, cnt, r) -> cnt > 0);
+				var count = agent.inserts(Stream.of(test1, test2, test3), (ctx, cnt, r) -> cnt > 0, InsertsType.BULK);
 				assertThat(count, is(3));
 
 				var data = agent.find(TestEntityForInserts.class, 1).orElse(null);
@@ -1722,7 +2057,8 @@ public class DefaultEntityHandlerTest {
 						LocalDate.of(1990, Month.APRIL, 4),
 						"memo4");
 
-				var count = agent.inserts(Stream.of(test1, test2, test3, test4), (ctx, cnt, r) -> cnt == 3);
+				var count = agent.inserts(Stream.of(test1, test2, test3, test4), (ctx, cnt, r) -> cnt == 3,
+						InsertsType.BULK);
 				assertThat(count, is(4));
 
 				var data = agent.find(TestEntityForInserts.class, 1).orElse(null);
@@ -1733,6 +2069,28 @@ public class DefaultEntityHandlerTest {
 				assertThat(data, is(test3));
 				data = agent.find(TestEntityForInserts.class, 4).orElse(null);
 				assertThat(data, is(test4));
+
+			});
+		}
+	}
+
+	@Test
+	void testBulkInsert5() throws Exception {
+
+		try (var agent = config.agent()) {
+			agent.required(() -> {
+				var count = agent.inserts(IntStream.range(1, 20)
+						.mapToObj(i -> new TestEntityForInserts(Long.valueOf(String.valueOf(i)), "name" + i, 20 + i,
+								LocalDate.of(1990, Month.APRIL, i), "memo" + i)),
+						InsertsType.BULK);
+				assertThat(count, is(19));
+
+				var data = agent.find(TestEntityForInserts.class, 1).orElseThrow();
+				assertThat(data.getName(), is("name1"));
+				data = agent.find(TestEntityForInserts.class, 2).orElseThrow();
+				assertThat(data.getName(), is("name2"));
+				data = agent.find(TestEntityForInserts.class, 3).orElseThrow();
+				assertThat(data.getName(), is("name3"));
 
 			});
 		}
@@ -1775,7 +2133,8 @@ public class DefaultEntityHandlerTest {
 				var count = agent.inserts(Stream.empty());
 				assertThat(count, is(0));
 
-				assertThat(agent.query(TestEntityForInserts.class).collect().size(), is(0));
+				assertThat(agent.query(TestEntityForInserts.class)
+						.collect().size(), is(0));
 			});
 		}
 	}
@@ -1827,7 +2186,8 @@ public class DefaultEntityHandlerTest {
 						Optional.of("memo3"));
 				agent.insert(test3);
 
-				var list = agent.query(TestDataNoKeyEntity.class).collect();
+				var list = agent.query(TestDataNoKeyEntity.class)
+						.collect();
 				assertThat(list.size(), is(3));
 			});
 		}
@@ -1845,7 +2205,8 @@ public class DefaultEntityHandlerTest {
 				var test3 = new TestDataMultiKeyEntity(2, "key1", "name3");
 				agent.insert(test3);
 
-				var list = agent.query(TestDataMultiKeyEntity.class).collect();
+				var list = agent.query(TestDataMultiKeyEntity.class)
+						.collect();
 				assertThat(list.size(), is(3));
 			});
 		}
@@ -1961,9 +2322,11 @@ public class DefaultEntityHandlerTest {
 			var sql = ctx.getSql();
 			assertThat(sql, containsString("IF memo != null"));
 
-			ctx.param("id", 1).param("name", "updatename");
+			ctx.param("id", 1)
+					.param("name", "updatename");
 			assertThat(agent.update(ctx), is(1));
-			assertThat(agent.query(TestEntity.class).equal("id", 1).first().orElse(null).getName(), is("updatename"));
+			assertThat(agent.query(TestEntity.class).equal("id", 1)
+					.first().orElse(null).getName(), is("updatename"));
 		}
 	}
 
@@ -1985,9 +2348,11 @@ public class DefaultEntityHandlerTest {
 			var sql = ctx.getSql();
 			assertThat(sql, not(containsString("SF.isNotEmpty")));
 
-			ctx.param("id", 1).param("name", "updatename");
+			ctx.param("id", 1)
+					.param("name", "updatename");
 			assertThat(agent.update(ctx), is(1));
-			assertThat(agent.query(TestEntity.class).equal("id", 1).first().orElse(null).getName(), is("updatename"));
+			assertThat(agent.query(TestEntity.class).equal("id", 1)
+					.first().orElse(null).getName(), is("updatename"));
 
 			handler.setEmptyStringEqualsNull(true);
 		}
@@ -2008,7 +2373,8 @@ public class DefaultEntityHandlerTest {
 			var ctx = handler.createDeleteContext(agent, metadata, null, true);
 			ctx.param("id", 1);
 			assertThat(agent.update(ctx), is(1));
-			assertThat(agent.query(TestEntity.class).equal("id", 1).first().orElse(null), is(nullValue()));
+			assertThat(agent.query(TestEntity.class).equal("id", 1)
+					.first().orElse(null), is(nullValue()));
 		}
 	}
 
